--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,35 +1,26 @@
 ---
-title: 中共为维护邪魔统治在昆仑山设下风水祭坛
+title: 澳洲肯德基或因疫情出现供给短缺
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1847827/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1847851/)
 
-作者：银河勇气星—骄子
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-1月9日，郭先生大直播中揭穿了中共以“无神论”洗脑国人，实则是彻头彻尾的巫术迷信者的本质。更有甚者，为了维护统治，中共当局不惜耗费巨额百姓税收，在昆仑山设下风水祭坛，以巫术续命。
+撰稿：Gradient Boost
+![](https://assets.gnews.org/wp-content/uploads/2022/01/011102-1.jpg)网络图片
+澳大利亚全国各地的供应链问题导致购物者不得不面对空荡荡的货架，同时运输、配送和商店的工人被迫隔离无法继续工作。继连锁超商之后，新一轮疫情爆发对澳大利亚的连锁餐饮行业的影响也逐步显现。现在，肯德基已经确认它受到了Omicron的冲击，一些餐点现在已经从该品牌的菜单上消失了。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide2-4.jpeg)
+肯德基的一位发言人表示：“不幸的是，我们的供应链已经中断，我们的一些餐厅将提供删减版本的菜单……对于这给我们的客户造成的任何问题，我们深表歉意——我们正在尽一切努力帮助我们的供应商重回正轨。”
 
-喜马拉雅-昆仑山系形成于6500万年前，其庞大的规模和多样化的地质地貌，成为欧亚大陆重要的气候、生态影响因素。中国的远古地质经书《山海经》，称昆仑山为“万山之祖“。进入二十世纪，越来越多的研究，也相继表明了喜马拉雅山-昆仑山系不同寻常的地质学的特征。
+空荡荡的货架出现在全国各地，而农民们已经证实新鲜食品实际上一直都在生产和栽培当中，问题只是如何把它们送到顾客手上。
 
-迷信堪舆学说，是中共历代领导人的典型特征。自毛泽东时代开始，昆仑山的风水祭坛便成为中共权力的来源，据郭先生回忆，中共当局在昆仑山下所设的祭坛，其规模和豪奢程度令人咋(音“则“)舌，有九百九十九层天阶，外观似外星飞船，并且严格按照八卦阵型排布。自建坛伊始，无论任何天灾人祸，中共从未停止搜刮民脂民膏来建立这个祭坛。丧心病狂的中共当局，不惜以活人祭祀的形式，每年屠杀数百童男童女。该活祭任务往往由中共在新疆、西藏驻地的特种兵执行，官兵在任务后皆被灭口。这类大大小小的”活祭“、”屠杀“，只是中共在新疆、西藏对各民族大屠杀的一个缩影。
+澳大利亚新南威尔士州农民协会主席詹姆斯杰克逊说：“我们的种植者正在向悉尼市场运送大量农产品，我们正在努力确保农场企业能够继续收获这些作物……可悲的是，我们看到一些公司和个人将疫情作为哄抬价格的机会，因此我们会要求 ACCC 密切关注零​​售商，以确保他们不会让价格高于新鲜水果和蔬菜的农场门价。”
 
-郭先生表示，这个祭坛以中华儿女鲜活的生命“供奉着“着中共常委的血脉，诅咒着中华大地56个民族。上个月，中共习近平当局将北京盘古大观的龙头以巨大外围铁幕加以掩盖，同时施展巫术，诅咒郭文贵先生，这一行径已被日本主流媒体密切跟踪报道，中共依靠神秘力量来延续邪魔统治的行径，已全球尽知。
+相比肯德基，快餐巨头麦当劳则相对较为乐观。麦当劳的发言人表示：“与许多企业一样，麦当劳澳大利亚一直在谨慎管理我们的供应链——其中大部分都位于澳大利亚……在整个大流行期间，我们将继续与我们强大的长期供应商、农民和生产商网络密切合作，以确保我们的客户能够继续享用我们美味的食物。”
 
-参考链接：[2022年1月9日 文贵大直播：哈薩克斯坦局势进展分析；青海地震几大山脉蓝莲花](https://gtv.org/video/id=61dade8c4658a73785d25465)
+新闻参考链接：[KFC facing in-store shortages as Omicron supply issues continue](https://www.9news.com.au/national/coronavirus-food-shortage-updates-kfc-affected-nsw-farmers-call-for-rapid-antigen-tests-supermarkets-empty-shelves/b1dac67d-ab52-4304-9dbc-21f5b9a06f93)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
 
-总编：Zion文恩
-编辑：Zion文恩
-校正/发稿：谐趣园
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
