--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,23 +1,35 @@
 ---
-title: 美国人权活动家呼吁在北京奥运会期间开展“小熊维尼”观赏活动
+title: 樱花灭共诗——望昆仑（新韵）
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1847805/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1847819/)
 
-**撰稿：东京樱花团/盖特第一批注册**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1-106.png)
-**美国人权活动家肖蒂接受美国之音的采访时说北京冬奥会是种族灭绝奥运会，应该坚决抵制。**
+撰稿：东京樱花团/曲非烟
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2-39.jpg)
+昆仑高万仞，
 
-**她呼吁民众冬奥会期间拒绝收看运动会直播，并且要在奥运会期间观看动画片《小熊维尼》和1989年天安门事件的纪录片。**
+兽锁九天门。
 
-**针对北京冬奥会的赞助商，苏珊也计划发起不买运动。**
+海内延龙脉，
 
-**信息源：**
+河源哺夏民。
 
-**[北京五輪期間に「くまのプーさん」視聴キャンペーン、米人権活動家が呼びかけ＝韓国報道](https://news.yahoo.co.jp/articles/d200c2d288996607f7d513afbf357269595486dd/images/000)**
+巍峨峰自在，
 
-**编辑：东京樱花团/知了知了**
-**发布：东京樱花团/**yuxingcao01
+渺远域精神。
+
+凝眺喜山处，
+
+虚极忘垢尘。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-802.png)
+插图：东京樱花团/闪闪
+
+校对：东京樱花团/知了知了
+发布：东京樱花团/yuxingcao01
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
+
+
+
+
 
 
  
