--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,24 +1,19 @@
 ---
-title: 有声&#124;重拾自信心
+title: 有声&#124;“子有所教 老有所养” 是新中国联邦的基本愿景
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1847663/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1847664/)
 
 配音：香草山健身部 – 玫瑰园
 ![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
-“很多人问过我，为何这么自信？唯一让你自信的，是你内心充满了和别人不同的知识和经历，你没去过七女峰，加拿大大瀑布，玛雅文化遗址，缅甸过去最早佛教文化的地方，没看过这些，你不可能有自信。我最痛苦的，每天从厕所出来，我得跟家里人装傻。不这样我的自信都漾出来了。我跟很多人说话，时刻告诉自己，要回到当下来。只有我敢说水往上流，你们都是往下流的。共产党就是把中国人的自信拿走了。”
+在1月9日的大直播中，郭文贵先生讲述了灭共以后，中国社会一定要恢复 “少有所依，老有所养“的社会。
 
-今天的大直播里文贵先生对战友们推心置腹吐露着心声，用其特有的人生经历和阅历丰富的知识向我们展示他那鲜为人知的懊恼。
+郭先生说，中共国的养老金问题是一个伪命题。传宗接代，是人类的基本权利。即使在春秋战国时期，税赋很重，最首要解决的，也是“少有所依，老有所养”，这是中华民族几千年的文明传承。但在中共国，老年人既死不起，也活不起。养老金本就属于民众，却被共产党利用，成为统治的工具。
 
-何尝不是啊！多少有理想和抱负，有学识和智慧，有正义和信仰人们的自信心，在中共国几十年的极权统治下早都被剥夺至一丝不挂⋯⋯
+郭先生明确表示，新中国联邦灭共后，第一，要恢复正常的家庭伦理、社会道德；第二，教育是最紧迫最重要的事，也是法治、信仰、良知的基石；第三，公民到50岁以后，由国家负责养老，衣食住行、治病送终，全免费。建立喜币喜联储，就是在未来，优先让孩子和老人受惠。老年人可以自己选择养老的方式，并且鼓励老年人工作和发挥余热。
 
-被历次名目繁多的政治运动无辜牵连的人们失去自信；敢于表达正义声音遭受打压的人们失去自信；惨遭各种伤害求助无门的人们失去自信；被愚昧无知、论调耻笑的求真求实的人们失去自信；辛勤却拘紧贫穷的人们在人模狗样的爆发户前失去自信。感叹啊，太多太多失去的自信啦！
+社会形成敬老爱老的风气，让老人更有安全感，活得更有尊严。这是新中国联邦的基本愿景。
 
-久违的个人自信心，生活在自由民主的国家让我拾回一点点自信；学习工作、平等机会让我拾回自信；不同种族、同事之间融洽关系拾回自信；努力工作，得到晋级报酬拾回自信⋯⋯
-
-如今我参与爆料革命，用那蹩脚英语和需回炉的中文写着过去、现在、还有将来。推文、盖文和GNews 的发表的每字每句都将展现生命中我曾有过的自信心！
-新中国联邦人灭共自信心满满！
-
-文字版原文：[重拾自信心](https://gnews.org/zh-hans/1842319/)
+文字版原文：[“子有所教 老有所养” 是新中国联邦的基本愿景](https://gnews.org/zh-hans/1843832/)
 
 音频处理：喜山必胜Maverick
 发稿：呼吸的雾霾（文小呼吸）
