--- a/gnews/38.md
+++ b/gnews/38.md
@@ -1,14 +1,14 @@
 ---
-title: 共同的信仰像火一样 让我们同心灭共
+title: 日本一定会成为第二大数字货币市场
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1847493/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1847494/)
 
 文编：东京樱花团/樱花传媒
 视频:东京樱花团/中文小视频组
 
 1月1日，郭文贵先生在GTV大直播指出：
 
-火、水和阳光是生命的源泉。人类历史上，火是去除邪恶的最好的利器。像火一样的灭共决心和共同的信仰，让新中国联邦人忘记自我，认清善恶，在修行中完善自己，向世界传递美好的希望。火的力量一定会帮助爆料革命消灭中国共产党。
+未来的日本数字货币市场，Hpay，Hcoin和HDO流通的战略重要性，仅次于美国。第二次世界大战让日本失去了所有财富，目前的日本金融市场也处于萎靡不振的状态，所以日本不会错过打入数字货币市场的良机，日本最终会成为Hcoin的重要市场。争取Hpay代理权，日本的战友们加油吧。
 
 *编辑：东京樱花团/墨然
 发布：东京樱花团/平安卿卿*
