--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,25 +1,34 @@
 ---
-title: 澳洲大型连锁超商再度出台新的限购政策
+title: 中共“双减”政策致使新东方辞退6万员工
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1847886/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1847912/)
 
-撰稿：Gradient Boost
-![](https://assets.gnews.org/wp-content/uploads/2022/01/011103.jpg)网络图片
+#### 撰稿：日本东京方舟农场  海星
 
-由于 CCP 病毒造成的员工短缺和供应链问题对库存产生了持续的影响，澳大利亚大型连锁超市Coles 对某些杂货实行了新的购买限制。此前，Coles已经对一些食品做出了限购措施，例如鸡胸肉和香肠一次只能购买两包。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/92679FA0-26B5-4BF9-A86E-532208A9398D.jpeg)（图片来源：网络）
 
-而现在，一些日用品和非处方药物也将被纳入限购列表当中。例如卫生纸一次只能购买一包，而扑热息痛、布洛芬和阿司匹林每包限购两包。
+1月9日，受中共教育部“双减”政策影响，新东方创始人俞敏洪在微信上披露，该公司已经辞退了6万员工。
 
-这家超市巨头本周二在 Facebook 上表示：“由于大流行相关的供应链中断，我们商店的产品供应受到了影响……“我们的团队在这段艰难时期努力工作——请记住向他们展示他们应得的善意和尊重。””
+据《路透社》报导，俞敏洪日前在微信上发文透露，2021年新东方公司市值下跌了90% ，营业收入减少了80% ，辞退员工6万人，现金支出近200亿人民币，包括退还学费、辞退员工N+1 赔偿费、校区退租费等。
 
-同时Coles也在社群媒体上表示，恐慌性购买是完全没有必要的，尽管部分商品的供给会出现一定的限制。在澳大利亚东部各州，尤其是悉尼市所在的新南威尔士州，空空如也的货柜已是司空见惯的常态。
+同时，新东方全面停止K9的地面和在线培训，以香港上市公司为主体的新东方在线转型为销售农产品的电商平台。
 
-然而，与大流行开始时由恐慌性购买引起的供应短缺不同，当前的问题是供应链中断的结果，因为许多物流工人因 Omicron 变体的传播和爆发而被迫处于隔离状态。当前受到影响最为严重的主要是食品产业，不论是新鲜食品还是可以长期保存的商品。
+有分析人士指出，中共教育部在去年7月底推出的“双减”政策，强制关闭上万家针对义务阶段学生补课的教育培训机构，是导致以新东方为首的几十家上市公司股票暴跌、撤销门店、大规模裁员的主要原因。
 
-澳洲另一家大型连锁超商Woolworths Group 的首席执行官上周也承认了保持货架库存的困难程度。他表示，目前尚不清楚供应链条以及供给流程何时才能恢复正常。
+*参考链接：*
 
-新闻参考链接：[Coles introduces new nationwide buying limits on certain products](https://www.9news.com.au/national/coronavirus-supermarket-supply-shortage-coles-introduces-new-nationwide-buying-limits-on-groceries/6d8949ab-eb72-4999-aeb3-557404626eb3)
-![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
+1. [*https://cn.reuters.com/article/new-orientalyu-staff-layoff-0110-idCNKBS2JK0CX*](https://cn.reuters.com/article/new-orientalyu-staff-layoff-0110-idCNKBS2JK0CX)
+2. [*https://gnews.org/zh-hans/1757492/*](https://gnews.org/zh-hans/1757492/)
+
+
+* * *
+
+*素材采编：海星*
+
+*编辑：文顺*
+
+*发布：miumiu*
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
