--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,29 +1,25 @@
 ---
-title: 王毅新年窜访五国 必有所图
+title: 澳洲大型连锁超商再度出台新的限购政策
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1847854/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1847886/)
 
-作者：纽约香草山教育部 – 风雨同舟
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-2022年新年伊始，中共国外交部长王毅于1月4日-7日访问非洲三国：厄立特里亚、肯尼亚、科摩罗；然后再访问马尔代夫和斯里兰卡。王毅拒绝承认中共在非洲一带一路项目制造的债务陷阱，并以强硬指责来回应西方的批评。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/4-12.jpg)
-分析人士指出，王毅的此行真实目的暂时不明确。但是联想到2019年6月18日，王毅警告美国不要再逼中共，否则中共会打开潘多拉的盒子，而后全世界中共病毒疫情爆发。2021年7月26日王毅会见塔利班领导人后，塔利班在阿富汗迅速军事扩张，推翻阿富汗政府，驱离美军，并造成现在的阿富汗人道灾难。在近日，郭先生爆料，王毅在访问哈萨克斯坦后，哈萨克斯坦就爆发了内乱。在中共与西方博弈的关键时刻，王毅出访非洲，必有所图。
+撰稿：Gradient Boost
+![](https://assets.gnews.org/wp-content/uploads/2022/01/011103.jpg)网络图片
 
-参考链接：[2022年第一场，中国旋风式外交开始了！](https://www.163.com/dy/article/GTB859UH052182V3.html)
+由于 CCP 病毒造成的员工短缺和供应链问题对库存产生了持续的影响，澳大利亚大型连锁超市Coles 对某些杂货实行了新的购买限制。此前，Coles已经对一些食品做出了限购措施，例如鸡胸肉和香肠一次只能购买两包。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-01-at-10.17.55-PM.png)
+而现在，一些日用品和非处方药物也将被纳入限购列表当中。例如卫生纸一次只能购买一包，而扑热息痛、布洛芬和阿司匹林每包限购两包。
 
-总编：Zion文恩
-编辑：Ivy001
-校正/发稿：Fei797
+这家超市巨头本周二在 Facebook 上表示：“由于大流行相关的供应链中断，我们商店的产品供应受到了影响……“我们的团队在这段艰难时期努力工作——请记住向他们展示他们应得的善意和尊重。””
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+同时Coles也在社群媒体上表示，恐慌性购买是完全没有必要的，尽管部分商品的供给会出现一定的限制。在澳大利亚东部各州，尤其是悉尼市所在的新南威尔士州，空空如也的货柜已是司空见惯的常态。
+
+然而，与大流行开始时由恐慌性购买引起的供应短缺不同，当前的问题是供应链中断的结果，因为许多物流工人因 Omicron 变体的传播和爆发而被迫处于隔离状态。当前受到影响最为严重的主要是食品产业，不论是新鲜食品还是可以长期保存的商品。
+
+澳洲另一家大型连锁超商Woolworths Group 的首席执行官上周也承认了保持货架库存的困难程度。他表示，目前尚不清楚供应链条以及供给流程何时才能恢复正常。
+
+新闻参考链接：[Coles introduces new nationwide buying limits on certain products](https://www.9news.com.au/national/coronavirus-supermarket-supply-shortage-coles-introduces-new-nationwide-buying-limits-on-groceries/6d8949ab-eb72-4999-aeb3-557404626eb3)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
