--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,21 +1,36 @@
 ---
-title: 中共累计接种29.056亿剂次毒疫苗
+title: 中共的昆仑山祭坛能保命吗？
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1847687/)
+`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/1847735/)
 
-撰稿：东京樱花团/盐和光
+作者：波士顿五月花 跟随战神
+![](https://assets.gnews.org/wp-content/uploads/2022/01/20220111-1.jpg)
+2022年1月9日文贵先生在大直播中爆料，共产党在昆仑山修建了一座巨大的祭坛。那么中共为何修建这个祭坛？修建祭坛的目的是什么？祭坛又是何时修建的？
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/中共累计接种29.056亿剂次毒疫苗.png)[图片来源](https://www.rfa.org/mandarin/yataibaodao/huanjing/ql2-04012021061317.html)
+绝大多数人别说看过，就是连听都没有听过昆仑山有这么一个祭坛，文贵先生的爆料更增加了祭坛的神秘感。
 
-1月11日，每日经济报报道，中共国卫健委：截至2022年1月10日，31个省（自治区、直辖市）和新疆生产建设兵团累计报告接种中共病毒（新冠病毒Covid-19）疫苗290563.8万剂次。
+昆仑山古老而又神秘，有万山始祖之称。位于中共国的西部边陲，常年积雪覆盖，更像是上天为她披上了一层神秘的面纱。据文贵先生的描述，从空中俯瞰，祭坛像一个巨大的飞碟，趴在山脉之巅，很是壮观。祭坛共有八个角，按照八卦的形式排列，乾、坎、艮、震、巽、离、坤、兑各居己位，一个宽阔的广场上是祭拜的场所，一条长长的天阶从祭坛直插山脚，天价有999级。
 
-截至11月12日，全国累计报告接种中共病毒疫苗23亿7271.3万剂次，完成全程接种的人数为10亿7384.5万人，截至11月30日，全国累计报告接种中共病毒疫苗24亿9981.3万剂次，完成全程接种的人数超过11亿人次，中共用时40天接种5亿次毒疫苗，按照中共统计14亿人口，平均每个国人接种2针毒疫苗，国人在不明真相各种胁迫和宣传下已经被签下自愿书，没有任何人任何政府机构或单位来为此负责，愿国人都能醒来看清中共掩盖病毒和所谓的疫苗接种的流氓杀人本质。
+祭坛的四周布满了荷枪实弹的军人。其实，在进入祭坛的山口就已经被军事封锁，沿途又设置了若干道关卡。如果没有通行证恐怕插翅都难以飞越。文贵先生告诉我们，祭坛的戒备之森严超过了酒泉。众所周知，酒泉是中共两大卫星发射中心之一，属于核心机密，享受最高级的安保。而祭坛的警卫安保已经超过了酒泉，由此可见祭坛的重要，绝对是核心中的核心、机密中的机密。文贵先生还说过，“昆仑山的核心机密超过了习近平个人”。看来，昆仑山一定隐藏着什么巨大的秘密，关系着共产党的生死存亡。
 
-[【全国新冠疫苗接种超29亿剂次】](https://me.mbd.baidu.com/r/zuqWC8poxG?f=cp&amp;rs=200315434&amp;ruk=fAjvTKDNA9tzZXQ7Zje4kQ&amp;u=4a89d64c139f84b6)
+文贵先生为我们揭开了那层神秘的面纱：“原来天机啊，昆仑山是共产党权力的来源”。中共的权力来源于昆仑山，中共的命门就在昆仑山。中共设置祭坛是为了祭拜上天，守护其权力和命脉。这就不难理解共产党重兵守护祭坛的原因了。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/二维码.jpg)
+90年代，文贵先生几次到过昆仑山祭坛。郭先生是唯一不以军队身份、不是中央特批来到祭坛的。郭先生几次到访，从空中到地下，全方位掌握了祭坛的秘密。当然，没有任何人知道文贵先生到过祭坛，包括中南坑老杂毛们。
+
+共产党在五六十年代开始修建祭坛，其筹划时间或许更早。中共是天下最迷信的，首任党魁毛泽东从不进故宫，进京之前请所谓大师多次算命，确定时间和时辰。其中最关键的他们相信了昆仑山是中共命门之说，花费巨资、历时数年建造昆仑山祭坛。要知道，当时的中国可是饿殍满地。
+
+祭坛有一个特殊规定，虎、猪两个属相的人绝不允许登坛，据说这两个属相对中共不利，中共之迷信可见一斑。
+
+文贵先生过去30年干的事就是灭共，从天地、从空气、从量子。文贵先生到访祭坛就是在天地的层面、在量子的层面灭共。中共的命门已经被爆料革命和新中国联邦所掌控，其灭亡指日可待。
+
+* * *
+
+*编辑：文合*
+
+*封面：霹雳鼠年*
+
+*发布：吐纳*
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
