--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,32 +1,40 @@
 ---
-title: 有声&#124;“子有所教 老有所养” 是新中国联邦的基本愿景
+title: 文贵视角:共产党隐藏昆仑山的宇宙密码
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1847664/)
+`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/1847673/)
 
-配音：香草山健身部 – 玫瑰园
-![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
-在1月9日的大直播中，郭文贵先生讲述了灭共以后，中国社会一定要恢复 “少有所依，老有所养“的社会。
+撰稿:牛小妹
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Image-1-2-2.jpg)
+**风水就是磁场、就是科学、就是人生的密码**
 
-郭先生说，中共国的养老金问题是一个伪命题。传宗接代，是人类的基本权利。即使在春秋战国时期，税赋很重，最首要解决的，也是“少有所依，老有所养”，这是中华民族几千年的文明传承。但在中共国，老年人既死不起，也活不起。养老金本就属于民众，却被共产党利用，成为统治的工具。
+“在人类出现之前，地球就已经有震龙的存在。龙脉就是地球的气场，好比人活着时候的那口气。风水就是磁场，就像人的那口气，没有那口气人就死了。龙脉就是地球的气场。”文贵先生说出风水的奥秘，”我们所讲的风水，就是磁场。共产党不让你信风水，就是不让你懂磁场，不让你懂人生的密码。”
 
-郭先生明确表示，新中国联邦灭共后，第一，要恢复正常的家庭伦理、社会道德；第二，教育是最紧迫最重要的事，也是法治、信仰、良知的基石；第三，公民到50岁以后，由国家负责养老，衣食住行、治病送终，全免费。建立喜币喜联储，就是在未来，优先让孩子和老人受惠。老年人可以自己选择养老的方式，并且鼓励老年人工作和发挥余热。
+“人类的命运大同小异，灵魂永远不生不灭，人和大自然相处的关系，人和自己相处的关系，从来不曾变化。人的灵魂是有质量的，人死后身体的重量要比死前少30多克。”文贵先生谈到人生的密码，”历史上如印度、玛雅、俄罗斯、葡萄牙帝国，无论曾经如何辉煌，对生、死以及灵魂的理解都是一样的。”懂得磁场风水的奥妙才能解开人生的密码。”目前科技已经读懂了一部分大自然的密码。过去神话中的千里眼及顺风耳，如今的科技都实现了。我们在屏幕中对话，也是有温度、有磁场的。”文贵先生提点大家。
 
-社会形成敬老爱老的风气，让老人更有安全感，活得更有尊严。这是新中国联邦的基本愿景。
+**昆仑山藏有地球的龙脉**
 
-文字版原文：[“子有所教 老有所养” 是新中国联邦的基本愿景](https://gnews.org/zh-hans/1843832/)
+“地球的龙脉，就是地球的呼吸系统，崑崙山的磁场就是地球的龙脉。一旦昆仑山失去磁场，地球也就化为乌有。”文贵先生惊爆崑崙山的奥秘，”昆仑山的气场可以用简单的测试来证实，譬如找有缝隙的地方立一个铜钱或银元，你会发现大概在凌晨12点的时候，那个铜钱或银元会发生抖动发出振颤的声音，这就是磁场，影响磁场变化的地方就是龙脉。”
 
-音频处理：喜山必胜Maverick
-发稿：呼吸的雾霾（文小呼吸）
+**共产党在昆仑山设立祭坛**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%B8%80%E6%9C%88%E5%B0%8F%E5%9B%BE-1.jpg)
+“共产党夺取政权之后，就在昆仑山建立了一个飞碟形状的八卦阵祭坛，从上到下共有999阶的天梯，有专门的军队驻守，只有属相非虎非猪的人才可以进入。所有驻守的军人，没有一个可以活着退伍回去。共产党每年都会挑选许多处女处男去敬奉山神，有新疆、西藏的，也有彝族的、傣族的、蒙古族的和汉族的人。”郭文贵先生在大直播中爆料。
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is image-40-1-3.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-3.png)
+共产党是天下最迷信的魔，却要求人民不要迷信。”真正的迷信是指对大自然的错误理解。我们相信大自然，正确理解大自然的密码，那是信仰。我们千万不能迷信，但一定要有信仰。要正确理解大自然的密码，正确理解人的来源和去向何处，正确理解宇宙、地球和人类之间的关系。”文贵直指信仰的重要性，”中国历史从来都是敬重山川龙脉，敬重龙和各种神灵，但共产党却把这种对自然的敬重视为糟粕，恣意破坏中国的风水和磁场，造成大气污染、土壤污染、山河污染。”
+
+**共产党屠杀各民族以祭祀山神**
+
+“中共每年都会在特殊的时辰挑选七百个处男、处女去祭拜昆仑山神。为什么执行秘密的部队从来没有回来过？都献给山神了。”只有了解共产党的邪恶，才能彻底消灭共产党。”共产党不只针对新疆人，对任何种族都是大屠杀，它对昆仑山神供奉56个民族的处女处男。不灭共，任何种族都无法存活。他是魔，你是人。人类如果没有信仰是无法灭共的。”文贵先生说明灭共是正义的必须。
+
+“就因为当地人民失去信仰，天津，西安，郑州的疫苗灾害才会如此严重。”人类必须要有敬天、敬地、敬大自然的信仰，才能洗刷贪、瞋、癡、慢、疑的人性，否则难逃疫苗灾难的诅咒。”咱们遇到了山妖、河王八，就是共产党。共产党把风水，磁场全毁了。万佛万神饶不了共产党。人不灭共产党，天也会灭了它!”文贵先生说出天机。
+
+**拥有共同磁场的同修人**
+
+“新中国联邦人是拥有山川大地密码，有共同磁场的人。”文贵先生传递宇宙生命的讯息，”我认为太阳系之外就是天堂，不同的修行会有不同的果报。当你修行达到更高的时候，灵魂就会昇华，离开地球去到某个星座。就像玛雅文明，回到了他原来的星座。在那个星座，你的身体（载体）可能是另外一个样子。就像佛教所说的是一个欢乐的世界，一个没有贪嗔痴慢疑的世界。也像耶稣所说的天堂。”
+
+“我相信海里的生命和山里的生命比我们地球人类的生命还丰富 ! 如果你在海底潜过水，去过深山里的幽洞、玻璃洞、琉璃洞，去过坦尚尼亚的蛇山，去过撒哈拉大沙漠、北极、南极，你就会觉得地球的75亿人的生命非常渺小。”文贵先生感叹人类对生命奥秘的无知，
+
+生命本身就是一场修行，一场排除自身贪、嗔、癡、慢、疑的过程，而冠状病毒疫苗灾害正是地球人承受苦果、修炼正气的道场。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
