--- a/gnews/37.md
+++ b/gnews/37.md
@@ -1,18 +1,27 @@
 ---
-title: 日本一定会成为第二大数字货币市场
+title: 中共盜國賊貪腐程度駭人聽聞
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1847494/)
+`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/1847514/)
 
-文编：东京樱花团/樱花传媒
-视频:东京樱花团/中文小视频组
+采編： Quitman 編輯撰稿：硫酸羥氯喹64
 
-1月1日，郭文贵先生在GTV大直播指出：
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/a-24-edited.jpg)圖片來源：ZXW
 
-未来的日本数字货币市场，Hpay，Hcoin和HDO流通的战略重要性，仅次于美国。第二次世界大战让日本失去了所有财富，目前的日本金融市场也处于萎靡不振的状态，所以日本不会错过打入数字货币市场的良机，日本最终会成为Hcoin的重要市场。争取Hpay代理权，日本的战友们加油吧。
 
-*编辑：东京樱花团/墨然
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
+據[GTV文貴大直播]節目1月9日報道，權傾一時的中共盜國賊王岐山黨羽之一，[人壽保險公司]董事長王濱近期因在與獨裁黨魁習近平的權力內鬥失勢後而遭當局調查，並被指控其在任期間，生活極度奢靡，並利用手中權力為王岐山行賄受賄，作孽無數。
+
+據悉，王濱在2006年以前，僅公款購買古木就花掉20多億元人民幣。並曾在香港的[Van Cleef] 珠寶店中，指使[海南白馬廣告公司]為其支付近1000萬美元購買了當時最昂貴的四塊手表作為賄賂中共高官的贓物。
+
+[GTV]報道稱，王濱對天價名表的收藏和占有幾近瘋狂，並為此專門獵取瑞士特製版名表以滿足中共各盜國賊家族欲壑難填的貪婪。例如，他此前搜刮並送給王岐山的[江詩丹頓]特製版手表，每塊都價值近1億美元。由於持續大量購買，導致在過去2-3年的疫情期間，瑞士名表的價格普遍都高漲了近10倍，而其中的大部分幾乎都被中共盜國賊家族所獲。
+
+目前，在中共盜國賊集團中，如同王濱這種碩鼠巨貪之輩數不勝數，但他的邪惡和王岐山的其他走狗如康點、田國立、田惠宇、朱雲來和朱燕來相比堪稱小巫見大巫。有鑒於此，不徹底鏟除中共邪魔，所有黎民百姓將世代為奴，永無天日。
+
+* * *
+
+發稿：硫酸羥氯喹64
+
+新聞鏈接：https://gtv.org/video/id=61dade8c4658a73785d25465
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
