--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,23 +1,32 @@
 ---
-title: 澳洲维多利亚地区数千医护人员无法进行工作
+title: 从小王子对话郭文贵先生何为龙气与龙脉说开来
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1847913/)
+`新西兰伊甸农场听写编辑组` [轉載自GNews](https://gnews.org/zh-hans/1847927/)
 
-撰稿：Gradient Boost
-![](https://assets.gnews.org/wp-content/uploads/2022/01/011104.jpg)图片涟源：Pexels免费照片素材库
-当地时间周二，澳大利亚维多利亚州又记录了37,994例新增CCP病毒感染病例，同时还有13人不幸因病去世。目前维州地区总共有861人因CCP病毒住院，同时还有117人因CCP病毒而处于重症监护状态。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-803.png)[图片来源](https://zh.wikipedia.org/wiki/%E5%85%AB%E5%8D%A6#/media/File:Bagua-name-earlier.svg)
+1月9月的文贵大直播中，郭先生论及中共祭祀邪魔，揭穿中共是真正地利用风水妄图长久奴役中国人的真相，对话中郭先生对阴阳、风水、五行八卦娓娓道来，相信已经激起了各位战友对五行风水、周易八卦的兴趣，本文试从几个小的方面与大家分享一些《周易》以及风水相关的小知识。
 
-3,392 名医院工作人员和 422 名维多利亚救护车工作人员由于感染CCP病毒或成为病例密切接触者而无法工作，这导致该州卫生系统出现了普遍的人员短缺。然而，州长丹尼尔安德鲁斯表示，预计受影响的员工人数会更多，因为这些数字仅为自我报告的病例。
+原视频中，1：49：20小王子提问郭先生：“何谓龙脉与龙气？”，郭先生回答为：“艮（gèn）、巽（xùn），震（zhèn），震为龙，故称震龙；而风水则是指磁场。磁场就是生人的那一口气，龙脉即为地球上的气场。昆仑山不一般的磁场，是地球本身的呼吸，有如人之呼吸。”郭先生还说，中国共产党就是以污染大气、污染山川河流的方式影响和改变着磁场，新中国联邦就是要灭掉共产党，修复磁场，改善中国人的生存环境。
 
-维多利亚州目前的双剂疫苗接种率为 93%，有17% 的居民已经完成了加强针的接种，但严重的疫情却并没有因此受到阻遏，反而呈现出愈演愈烈的态势。而在昨天，维州的疫苗预约系统正式对5 至 11 岁的儿童开放，目前已预有大约 39,000 名儿童预约CCP病毒疫苗接种。
+那么就让我们先来看看这几个卦象，首先，辰（chén）与震（zhèn），相信细心的听众都发现了，直播中郭先生发音是震（zhèn）而非辰（chén），这正是精妙之所在，辰（chén）本是地支的第五位，大概是指清明至立夏的前一天，五行代表土，阴阳学中辰为阳。辰有振作之意，亦指草木整齐地全面覆盖地面的状态。后世为方便记忆，将地支与十二生肖对应，所以便有了辰龙。
 
-安德鲁斯先生同时还宣布了一项 400 万美元的赠款计划，用于补贴全科医生和社区药店推广学校接种CCP病毒疫苗，以增加儿童接种率。
+我们再来看震（zhèn），震是一个卦象，震（☳）为雷。意思是振奋、震惊、惊动、当头棒喝。在甲骨文中，震与䟴同源，都作![]()，卜辞中为震惊、震动之义。即《说文》说的：“䟴，动也。”但震后来又做为霹雳，也是打雷的意思，《说卦传》说的“震为雷”，雷震则万物惊醒，因此《说文》说是“振物者”。帛书作辰，可通䟴或震。依《说文》，辰通震，段注则指出，古震与振通，辰即震，也是振奋的意思。至此可见，震与辰是互相通用的，所以辰即为雷卦。正是因为郭先生对《周易》卦象以及传统文化的博学，才能在龙脉与龙气的问题中提出震龙之说！
 
-昨日，维多利亚州已经宣布了新的强制CCP病毒疫苗加强针政策，适用于一些重点工作岗位——其它岗位后续也可能出台相关政策。同时，新的限制管理措施也将生效，从 1 月 12 日星期三晚上 11 点 59 分起，在维多利亚州，酒店和娱乐场所的室内舞池将关闭，仅婚礼除外。另外对于医院探视也将有新的限制和要求。
+其次，我们再来看看艮（gèn）与巽（xùn），艮（☶）卦(艮为山)，意思是：“止、停止、重山阻挡去路。”另有巽（xùn），巽（☴）卦，巽为风，意思是：“申命，顺服，隐伏，渐进，进入”。《说文》巽“具也”，《说文》：“ ![]()，二卩也，巽从此。”二卩即，此亦巽之本字，甲骨文作![]()，为二人跪伏的形态，表示顺从、服从的意思，也是巽卦的卦义及取象。郭先生提及此处言明共产党在诸多山脉结合风水兴建秘密祭坛以祭祀邪灵。
 
-新闻参考链接：[Thousands of hospital staff unable to work as Victoria records 37,994 new cases of COVID-19](https://www.9news.com.au/national/coronavirus-victoria-updates-new-case-numbers-restrictions-return/124f6595-3287-492e-8d5a-5c48a80fabee)
-![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
+希望通过本文能够帮助战友解开更多有关风水、周易八卦方面的疑惑，能够更好地理解郭先生直播内容，更深刻地与各位战友进行探讨，郭先生对中华传统文化研究之纯正精深，实在令人佩服！
 
+编者按：1.本文作者专业方向与此有关，之所以班门弄斧，就为了能让更多战友对周易和中国传统文化有一个初步了解，更好地理解直播内容。
+
+2.因各种条件限制，作者手上暂时无法获取《说文》、《说文解字注》、《易经》等实体著作，故无法提供具体页码，仅凭藉记忆在网络上搜获相关注解，若有遗误，还望战友宽恕原谅。
+
+参考链接：[https://gtv.org/video/id=61dade8c4658a73785d25465](https://gtv.org/video/id=61dade8c4658a73785d25465)
+
+作者：雪菜
+
+校对：面包树/一念
+
+排版上传：文勇
 
  
 
