--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 灭共后，有三个核心、重要的必走之路
+title: 没有人会想到喜币涨400倍
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1848301/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1848349/)
 
 台灣寶島農場
 
