--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,11 +1,11 @@
 ---
-title: 【辱包】维尼合成器-第三版
+title: 【辱包】深海维尼
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1848172/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1848233/)
 
 作者：陌冰仙
 
-许可：CC BY 4.0；原曲：EasyPop – 快乐合成器
+许可：CC BY 4.0；原曲：深海少女（初音未来）
 
 * * *
 
