--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 让最牛的大企业看到喜联储绝对不会被挤兑挤垮
+title: 护士出来发声，认为现有治疗新冠患者方案，是在杀害患者
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1848487/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1848588/)
 
 台灣寶島農場
 
