--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: 你不灭共，我们什么族都没有
+title: 让最牛的大企业看到喜联储绝对不会被挤兑挤垮
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1848459/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1848487/)
 
 台灣寶島農場
 
