--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,7 +1,7 @@
 ---
-title: 让最牛的大企业看到喜联储绝对不会被挤兑挤垮
+title: G系列，成为大富豪之路
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1848487/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1848511/)
 
 台灣寶島農場
 
