--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党苦民弱民的核心战术
+title: 人类要面临一前所未有最可怕的种族间的冲突
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1850863/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1850902/)
 
 台灣寶島農場
 
