--- a/gnews/32.md
+++ b/gnews/32.md
@@ -1,7 +1,7 @@
 ---
-title: 青蒿素肯定两个功能，修复基因缺陷，攻击癌细胞
+title: 出来唱的歌手，他受过了多少的心理上的束缚和挑战，对他们而言不容易
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1851066/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1851146/)
 
 台灣寶島農場
 
