--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,10 +1,10 @@
 ---
-title: 疫苗大灾难（二）
+title: 造成今天这个灾难最重要的两点原因（二）
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1854686/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1854739/)
 
 #### 整理：雅典娜速记组
-![](https://assets.gnews.org/wp-content/uploads/2022/01/疫苗大灾难（二）-.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/造成今天这个灾难最重要的两点原因（二）-.jpg)
 发布：Frank2021
 
 **更多资讯，请关注：****
