--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,11 +1,9 @@
 ---
-title: 现在不是地域、海洋文明和大陆文明的战争，是资本主义和共产主义的太空战
+title: 疫苗经济
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1856086/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1856126/)
 
 台灣寶島農場
-
-
 
  
 
