--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 政府隐瞒了治疗 Covid 的政策 ，死于新冠病毒的人都应该被视为谋杀
+title: 整个西藏成为利益分配的牺牲品
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1856189/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1856227/)
 
 台灣寶島農場
 
