--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 整个西藏成为利益分配的牺牲品
+title: 西安的&#8221;共享财富&#8221;开始了
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1856227/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1856308/)
 
 台灣寶島農場
 
