--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,7 +1,7 @@
 ---
-title: 疫苗经济
+title: 西安的&#8221;共享财富&#8221;开始了
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1856126/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1856308/)
 
 台灣寶島農場
 
