--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,7 +1,7 @@
 ---
-title: 中国靠前的大企业, 只要和共产党有关的, 就有Ray Dalio 桥水基金投资
+title: 什么叫叛国？什么叫卖国？
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1856254/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1856333/)
 
 台灣寶島農場
 
