--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,32 +1,25 @@
 ---
-title: 西亚足球联赛再次有球员突发倒地
+title: 【中日财经爆】日本企业商品价格指数同比最大增幅 项目涵盖范围广
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1858705/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858788/)
 
-作者 台湾宝岛农场 Y.M.O
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-180.jpeg)
-在2022年卡塔尔星级联赛赖扬主场战胜沃克拉的比赛中，效力于沃克拉的马里国脚奥斯马内·库利巴利为了防守哈梅斯·罗德里格斯禁区外的吊射回追至本方球门内，不过在皮球飞出横梁后库利巴利却突然倒地，场上众人第一时间以为库利巴利是无接触受伤，但是发现库利巴利在球门内抽搐。就在场上其他人都不知所措时，哈梅斯·罗德里格斯第一个反应过来并且迅速冲上前对库利巴利进行施救，调整了后者的头部姿势，帮助其改善呼吸状况。随后医护人员及时入场救治，成功救回一命。当时赖扬1:0领先沃克拉，但在库利巴利倒下后由于情况的严重性和危险性双方球队均同意停止比赛，并保留剩余时间和比分。过几天双方重新将比赛踢完，赖扬3:0获胜。
+撰稿:东京樱花团/麗子
+![](https://assets.gnews.org/wp-content/uploads/2022/01/4-17.jpg)[图片源](https://mainichi.jp/articles/20211111/k00/00m/020/327000c)
+日本央行14日公布的2021年国内企业商品价格指数同比上涨4.8%，是1981年有可比数据以来最大的同比增幅。原油等资源价格飙升导致企业采购成本增加，利润受到挤压，所有影响将会转嫁到消费价格上，普通民众家庭负担急剧加重。
 
-后来经沃克拉的队医确认，库利巴利在比赛中突发心脏病，如果当时急救不及时世界足坛将会再多出一场悲剧。目前库利巴利已经被送到哈马德医院留院治疗。近一两年足球运动员由于心脏问题被迫下场，以及突然倒地甚至死亡的人数史无前例地激增，维基百科已经停止更新了在比赛中死亡的足球运动员人数。欧洲杯上丹麦国脚埃里克森就出现了类似的状况，好在同样及时进行急救处置才逃过一劫。加盟巴萨的阿奎罗在比赛中因为胸口不适从而进行了详细的检查，最终他被告知职业生涯无法再继续下去，只能选择在33岁的年纪退役，十分让人遗憾。另外包括曼联中卫林德洛夫和那不勒斯中场泽林斯基也在比赛中由于呼吸困难而被换下，世界顶级比赛中都已经出现这么多状况更不用说基数更大的低级别比赛了。
+企业商品价格指数显示了企业间交易的商品价格水平。过去，该指数的最大同比增幅是在2008年，当时由于投资资金的流入，油价飙升。当年指数为105.1，是1991年泡沫经济结束以来的最高水平。
 
-这还算是比较好的结果，因为他们目前都还活着，即使是今后无法再踢球，在生死面前都变得不值一提，但不是所有的球员都能被保住性命。12月22日阿曼马斯咯特俱乐部后卫哈立德·拉卡迪在赛前热身时突然倒地，最终不幸去世年仅29岁。埃及球员艾哈迈德·阿明、阿尔及利亚球员索菲安·卢卡、克罗地亚球员马林·卡西奇、危地马拉球员马科斯·梅纳尔多也都在由于心脏及呼吸问题不幸去世的名单之列。
+各项价格指数包括石油和煤炭产品上升27.8%，有色金属上升29.4%。海外市场资源价格的飙升和日元的疲软导致进口价格指数上升了22.7%。
 
-我在叙述哈立德·拉卡迪突然倒地身亡的文章中提到过运动员由于心脏问题离开球场的可能性就应该为0的。即使级别再低但足球运动员的健康检查也比我们普通人要严密得多，如果说不从事特定职业的普通人如果出现心脏问题尚且还算说得通，那就算从胜利的角度来看球队也不可能让有着健康隐患的球员留在场上然后自己面临少一名主力球员的窘境。但是这种违背常理的状况现在就这么发生了，只能说背后的力量隐藏很深且十分庞大。而在这些异常事件停止之前我们也要一遍遍地提出问题，宣传真相。
+企业商品价格一直保持在高位。同时发布的去年12月份国内企业商品价格指数同比上涨了8.5%，是有记录以来的第二高涨幅。在所调查的744项商品中，价格上升商品比价格下降多308项，与11月份相比增加32项。价格上涨已经开始涵盖更广，包括陶瓷石材产品以及信息通信设备。
 
-P.S.倒地的球员为马里国脚奥斯马内·库利巴利，不是那不勒斯的主力后卫卡列杜·库利巴利。
+信息源:
 
-新闻链接
+[昨年の企業物価、過去最大の4.8%上昇　家計負担への懸念も](https://news.yahoo.co.jp/articles/96766c912bb67f8eba214d545f86291097cb2f02)
 
-[https://www.dailymail.co.uk/sport/football/article-10396275/James-Rodriguez-performs-life-saving-opponent-Ousmane-Coulibaly-suffers-cardiac-arrest.html](https://www.dailymail.co.uk/sport/football/article-10396275/James-Rodriguez-performs-life-saving-opponent-Ousmane-Coulibaly-suffers-cardiac-arrest.html)
-
-* * *
-
-***更多资讯***
-[台湾农场精彩文章](https://gnews.org/zh-hant/author/taiwangnews/)
-[台湾农场精彩直播影片](https://gtv.org/user/5f60d588245d3c0579acdbec)
-[订阅台湾宝岛农场官方YOUTUBE频道](https://www.youtube.com/channel/UCXlInG8cGCHSN5y54zcgoOw/videos)
-[点击此处加入「台湾宝岛农场」Discord伺服器](https://discord.gg/zE5xTQzArt)
-
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
