--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,40 +1,23 @@
 ---
-title: 用易经原文解析毛泽东这个名字 ——绝非润泽东方
+title: 秘翻在线： 郭文贵先生爆料被验证 马来西亚媒体报道孙力军及一马发展公司（1MDB）案件
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1858615/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1858667/)
 
-撰稿—玄鸟
-校对/上传—无明逆流
+**撰稿：葛大饼**
 
-毛泽东（繁体字毛澤東），字润之（原作“咏芝”，后毛本人自作主张改为“润之”）。墙内媒体，通常以润泽东方，来解析毛泽东这个名字。笔者不才，在读《易经》的时候，偶然发现这个名字的真实含义。。。
+**责编：人间四月**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screenshot-2022-01-14-174117.jpg)
+2022年1月14日，马来西亚当地华文报纸《中国报》报道了中共国公安部原副部长孙力军被调查，并牵扯一马发展公司（1MDB）的案件。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Wh12.02.04-PM.jpeg)图片来源：网络
+美国司法部在2021年6月公布了大陪审团对刘特佐等人的指控，指控他们在中共的支持下从2017年前后通过后门渠道游说华府，试图对白宫和美国司法部施加影响。
 
-在揭示那个名字的真实含义之前，咱们先作一番铺垫工作，先讲述一下与毛泽东有关的一个神秘数字“二十八”。
+这份起诉书披露，刘特佐和前美国说唱歌手米歇尔、前共和党全国委员会副财务主席埃布罗迪，长期政治顾问和捐赠人戴维斯等人合谋，在刘特佐和孙力军的指示下，施压美国司法部撤销涉及刘特佐等人的贪污调查和没收诉讼，并企图将郭文贵先生遣返回中共国。新中国联邦Gnews对该起诉书也曾做过不少相关报道。
 
-1.毛泽东，繁体字毛澤東，繁体字的总笔画数，正好二十八画。而“二十八画生”，也正好是毛泽东的一个化名。
+1MDB案件曝光后，刘特佐行踪成谜，有媒体传闻他曾待过香港，澳门，中国等多个国家和地区。特别该事件对当地政坛影响巨大的马来西亚，这次也毫不避讳地把孙力军和1MDB案件联系起来，大肆报道孙力军被公诉的新闻，其罪名包括涉嫌受贿，操控证卷市场和非法持有枪支等。可见东南亚国家也开始醒悟，不再是孙力军孟建柱等上海帮势力可以控制的铁板一块。
 
-2.毛泽东生于1893年。1921年，毛泽东加入了刚刚成立的共产党。那一年，毛泽东正好二十八周岁。也是在这一年，毛泽东和杨开慧结婚。
+中共在全世界的蓝金黄，影响和干扰着他国政治，早在四年前郭先生就爆料，刘特佐一直躲在中共国享受着常委级待遇，因为他是孟建柱的私生子，孙力军和孟建柱都是上海帮的杀手，如今孟建柱被软禁，孙力军被调查只是共产党绞肉机体制下的牺牲品，任何人都逃不过被绞的命运！
 
-3.1949年，共产党篡政成功，那一年，毛泽东正好五十六周岁。五十六是两个二十八的加和。
-
-4.1976年，毛泽东离世，这一年，毛泽东周岁83岁，虚岁84岁。（按中国古代的习俗，人死是按虚岁论的）。八十四是三个二十八的加和。
-
-5.共产党的共字拆开，是“廿+八”，廿发音是nian，含义是二十，廿八也就是二十八的意思。
-其余还有很多，笔者在此就不一一列举了！
-
-铺垫工作做完，咱们进入正题，翻开《易经》第二十八卦（又一个二十八呦），大过卦原文如下： 大过。栋桡。利有攸往，亨。
-象曰：泽灭木，大过。君子以独立不惧，遁世无闷。
-
-笔者正是在读到“泽灭木”三个字的时候，觉得十分别扭，不禁发问：泽怎么会灭木呢？泽不是利于木的生长吗？。。。
-但经过反复的推敲后，认定易经原文没问题！但随之，一个颠覆性的结论涌入脑海，同时笔者也被震惊得无以复加：按照中华文化的阴阳五行理论，东方与木是对应的，是可以相互替换的（这是一个非常简单的基础知识，如下图）。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1060.png)图片来源：网络
-
-那么，如果把易经原文“泽灭木”中的“木”替换成“东”的话，不就成了“泽灭东”。。。
-
-再回想CCP篡政以来，以毛泽东为灵魂人物的共产党的所作所为，真是毁尽了东方的天、东方的地、东方的人。。。
-泽灭东方，这才是那个名字的真实含义！！！
+**[新闻来源](https://www.chinapress.com.my/20220114/%e4%b8%80%e9%a9%ac%e5%8f%91%e5%b1%95%e5%85%ac%e5%8f%b8%e8%b4%aa%e6%b1%a1%e4%b8%91%e9%97%bb-%e6%b6%89%e5%8f%8a%e4%b8%ad%e5%9b%bd%e6%94%bf%e5%ba%9c%e9%ab%98%e5%ae%98/)**
 
  
 
