--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,18 +1,42 @@
 ---
-title: 房地产巨无霸又双叕见闪崩
+title: 最迷信的共产党对这个国家是从天到地从心到生殖器控制
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1858703/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1858777/)
 
-**撰稿人：东南**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Picture1-6.jpg)**图片来源网络**
-**昨天地产巨无霸融创中国股价突然暴跌****22%****，创造公司自****2010****年上市以来近****12****年最大单日跌幅。****1****月****13****日早间公司抛出一份配股融资公告，拟以每股****10****港元配售****4.52****亿股股份，融资****45.2****亿港元，其中一半用来还债。此次配股为了保持吸引力，比前一交易日收盘价折让****15%****，融创中国近两年本已下跌近****80%****，此基础上再深度折让，****10****港元一股的配股价基本可以说是****“****打骨折****”****。**
+G-TV视频链接：[https://gtv.org/video/id=61e0fc2587664c47acd46a3e](https://gtv.org/video/id=61e0fc2587664c47acd46a3e)
 
-**就在****2021****年****11****月，融创中国刚刚通过配股发行****3.35****亿股，募资约****50****亿港元。间隔不到两个月再次低位配股，公司到底是有多缺钱？ 孙宏斌掌舵的融创中国，****2021****年实现近****6000****亿元的合同销售额，仅次于碧桂园和万科，跻身行业前三。值得关注的是，就在两个月前的****2021****年****11****月****13****日，融创中国首次配售****3.35****亿股公司股份，每股价格****15.18****港元，募资约****50.85****亿港元。而本次配售价为每股股份****10****港元，较上次配售价格下降了****34.12%****。密集低价配股融资，市场担忧融创中国资金链。就在****1****月****12****日，有消息称融创集团旗下多家公司部分股权被法院冻结。融创相关人士则表示，法院冻结资产是因为，受到监管账户监管加强的影响，公司部分项目与业务伙伴在商业合作上产生了小纠纷。 **
+**郭文贵先生：**大家讲这个的时候你再想想南普陀会议为什么选在南普陀，千年的普陀寺，普陀寺里面最关键地点在哪里？普陀寺里面有几个山的洞，曾庆红每年都去的。曾庆红每年的冬天就在福建过，福建在哪里？在厦门，厦门在哪里？中国的东南方。
 
-**好熟悉的暴雷节奏又扑面而来了，这眼看着还有半个来月就要过年了，还能让中国老百姓过个安定年吗？相较其他民族而言我们华人不管是富人还是穷人都会把自己的钱压在房子上，恒大的事还没有个结果，照这样的发展继续下去融创变成“恒二”相信很多人已经不会再怀疑，回头想想就像这种的龙头的房企都一直在不停的暴雷，这样的企业还会有机构当大韭菜去给他们融资吗？没有新的融资进入的话，那可以想象接下来的地产企业一定会像多米诺骨牌一样一个个的倒下。出来混迟早要还的。中共国的地产行业最后必然将一地鸡毛！**
+所以说刚才讲的时候叫什么？南龙、中龙、北龙，南干、中干、北干，是吧？巽山、艮山，是吧，震山，巽、艮、震，是不是？这是南、北、中，蓿艮震就把中国山脉全管，你刚才说的那些山都没有用的，那都是凑合上去的，你把巽、艮、兑，是吧，你把整个巽艮震，艮兑坤八卦这些全搞出来，你就知道中国的所有的《山海经》讲的什么，《三心通论》讲了什么。共产党是全人类最迷信的，它让你不迷信。而共产党整个对这个国家的控制是从天到地、从心到生殖器。
 
-文章参考：[闪崩！房企巨无霸突然暴跌22%…](https://www.163.com/dy/article/GTK13CPA0530NLC9.html)
-![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1.jpg)
+字幕来源：[2022年1月9日 文贵大直播 全文字版](https://gnews.org/zh-hans/1842354/)
+
+编辑整理：Jacques；
+
+字幕文件制作：小满；
+
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
