--- a/gnews/32.md
+++ b/gnews/32.md
@@ -1,20 +1,40 @@
 ---
-title: 中共正在把社会主义推向全世界
+title: 世卫组织、欧洲药管局警告重复接种加强针有害
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1858453/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1858529/)
 
-我在去年都告诉你们，疫苗灾难、疫苗战争、疫苗政治、疫苗经济，是共产党开启的，然后在美国共享财富。
+作者：纽约香草山文艺部 – 宁文静
+![](https://assets.gnews.org/wp-content/uploads/2021/12/条幅.png)
+1月11日，世卫组织和欧洲药品管理局公开声明，频繁接种中共病毒加强针危害免疫系统。
 
-**【郭先生直播摘要】**** 2022.1.12 ****中共正在把社会主义推向全世****界**** ****CCP **
+![](https://assets.gnews.org/wp-content/uploads/2022/01/10-4-scaled.jpg)
 
-**郭先生：**
+欧洲药品管理局、生物健康威胁和疫苗战略负责人马可·卡瓦莱里，在新闻发布会上警告说，疫苗加强针不应该重复施打，频繁地接种加强剂可能会对免疫系统造成危害。
 
-兄弟姐妹们你们看的太少了，我在去年都告诉你们，疫苗灾难、疫苗战争、疫苗政治、疫苗经济是共产党开启的，然后在美国共享财富。美国也会这么干，欧洲也会这么干。记住我说的话，一定会这么干。让你呆在家里，然后有人来共享你的财富。谁都想当共享别人财富的那个人，然后社会仇恨激发，整合财富就开始了，走着看吧。
+当天晚些时候，世卫组织也在一份声明中说，基于原始疫苗成分的反复强化剂量的疫苗接种策略是不合适的，也是不可持续的。
 
-这就是为什么伊莎贝拉·杨疯狂，在这个时候，共产党有组织的。第一个海外华人，美国五百万华人，还有日本的草根，你们都要被共享财富。因为你们占据了我们太多财富，你就是当年德国的犹太人，因为你们没有感受这个，你们走着看。半年内你会感受到，青青草原不会再恨共产党在哈萨克斯坦做什么，你会恨的是现在正在你身边做什么，我再说下去怕你们几个都尿了。
+分析人士称，两大机构突然改变风向，或因为疫苗副作用的数据令人震惊，并且他们要为下一步官方公布停止疫苗强制接种，做好铺垫。
 
-剪辑剪辑：北方信使 |听写：雨山溪桥客|翻译：精糧 |校对：烟波浩淼 | 视频制作+字幕：CG.| 编辑&发布：断播
+参考链接：
 
+- [FRIGHTENING: WHO Joins EU and Changes Direction — Suddenly Warns Against Taking Continued COVID Booster Shots](https://www.thegatewaypundit.com/2022/01/frightening-joins-eu-changes-direction-suddenly-warns-taking-continued-covid-booster-shots/)
+- [Interim Statement on COVID-19 vaccines in the context of the circulation of the Omicron SARS-CoV-2 Variant from the WHO Technical Advisory Group on COVID-19 Vaccine Composition (TAG-CO-VAC)](https://www.who.int/news/item/11-01-2022-interim-statement-on-covid-19-vaccines-in-the-context-of-the-circulation-of-the-omicron-sars-cov-2-variant-from-the-who-technical-advisory-group-on-covid-19-vaccine-composition)
+- [Frequent Boosters Spur Warning on Immune Response](https://www.bloomberg.com/news/articles/2022-01-11/repeat-booster-shots-risk-overloading-immune-system-ema-says)
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
+
+总编：Ivy001
+编辑：文真
+校正/发稿：海阔天空1
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
