--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,33 +1,29 @@
 ---
-title: 江泽民朱镕基家族盗卖领土掌控和田玉价UBS摩根为其洗钱
+title: 中共视昆仑山和喜马拉雅山为天地之神视南普陀为人间道
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1858690/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1858755/)
 
-视频链接：[2022年1月12日 文贵大直播- G|TV](https://gtv.org/video/id=61df44f3a6dfdd6031535439)
+G-TV视频链接：[https://gtv.org/video/id=61e0fb7b87664c47acd469f9](https://gtv.org/video/id=61e0fb7b87664c47acd469f9)
 
-**郭文贵先生：**那么2002年的塔吉克斯坦这个土地交易背后是谁知道吗？去查查朱镕基跟他谈的啥？我郭文贵敢在世界的任何一个法庭告诉你，朱镕基、江泽民家族在那里拿到了天大的钱，到今天还在收钱。
+**郭文贵先生：**我告诉你，全人类最牛的水，如果佳佳、小王子、小飞象、小飞侠，你们想生宝宝生得好，又没打疫苗，未来先喝点儿帕米尔高原的水，那真是万年的水呀，它是印度洋被挡下来的水，在整个石头里边儿留下来的，和大西洋的水整个未蒸发留下来的，在沉寂之后，从下面再挖掘的水，那真的是万年的水呀！
 
-中国老百姓的无知是全人类我没有见过的。他们敢把国家的土地就这么卖出去，在那儿收着矿，而且协议很简单，永久这个公司拥有这个地方矿的开发权。
+七哥在盘古的时候，是天天用帕米尔高原的水煮饭吃的，所以说七哥不可能是郭3秒，怎么的也得郭3.5秒，因为是帕米尔高原的水，那真的就像今天吃青蒿素的感觉似的。
 
-昆仑玉，就是所谓的和田玉，你们这些傻子们！你见过真的是几吨重的和田玉吗？跟你说你可能不相信，那个价格全都是江、曾、朱之控制，比特币为啥是共产党搞起来的？就是江家搞起来的，他要把钱洗…不是洗白了要洗雪白呀！
+你到新疆以后，你知道新疆的灾难在哪里呀？新疆的大自然里边儿藏的物资和密码，包括昆仑山脉的北侧2577公里，从南到北，就西南到东北。共产党是不可能让出西藏的，是不可能让出新疆的，所以很多人说要搞西藏独立，新疆独立，我可以告诉你除非你把中国全灭了，是不可能让你独立的。
 
-为什么UBS成为中国第一个，外资允许的百分之百的这个执照？为什么摩根要拿证卷公司？都是王岐山、江家的，他洗钱需要工具啊，它需要水、需要池子、他洗完放哪去。
+这个没有它的水、没有它的山，它的灵都没了。而共产党深为迷信的，它是昆仑山和喜马拉雅山这是它的所谓的阴阳，是它的天地之神。然后它认为人间道就是普陀。普陀是什么？在哪里？就是今天的南普陀山——舟山。
 
-我告诉大家如果你不懂得什么叫叛国和卖国你这一辈子被骂叛国、卖国你就太冤了，你有资格叛国吗？有资格卖国吗？你就算个屁，是吧！你算个屁。
+字幕来源：[2022年1月9日 文贵大直播 全文字版](https://gnews.org/zh-hans/1842354/)
 
-就当时我在里边儿的时候，当时那个郑州裕达就是说我是美国的派来的特务，跟一个好莱坞的女人结婚了，然后就监视郑州的时候，我被找去了，他们说，郭文贵人家说你是叛国，我说是吗！我说你说我叛哪个国了？他说你真以为你叛国？你有资格叛国吗，？那叛国是共产党员在叛国，轮到你来说叛国了吗？
+编辑整理：Jacques；
 
-就连一个郑州的一个所谓金水区的检察官、反贪局的副局长，都敢说我这话。后来这哥们儿被枪毙了，被被注射毒针死了，你可以查查去，一个人贪污两个多亿当年。
+字幕文件制作：小满；
 
-所以兄弟姐妹们！你再看一看为啥我讲昆仑山脉？为什么讲帕米尔高原？为什么讲整个的西藏、喜马拉雅？喜马拉雅山上的秘密、西藏的矿藏、西藏的奇才异宝都去哪儿了？
+视频制作及上传：Cindy；
 
-光在西藏，用当时的曾庆红的秘书说，我在西藏搜罗搜罗我分分钟搜罗个一百个亿、两百亿，分分钟啊！一个秘书都这么说，今天青青草原你坐这儿你还灭共呢，你连知道共产党邪恶的0.001（%）都没有。
+G-News发布：小满；
 
-编辑整理：海贼王M.D.LUFFY；
-
-G-News发布：海贼王M.D.LUFFY；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们——**[**日本银河系农场Discord群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
 
 声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
 
@@ -35,15 +31,15 @@ G-News发布：海贼王M.D.LUFFY；
 
 Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
 
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
 
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
 
 盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
 
-推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
 
-G-TV：日本银河系农场。
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
