--- a/gnews/50.md
+++ b/gnews/50.md
@@ -1,38 +1,31 @@
 ---
-title: COVID-19 最新情报｜研究：蜂蜜与黑孜然联合疗法能有效促进 COVID-19 患者康复
+title: 【中日财经爆】日本麒麟将清空与华润合资公司股份 退出中共国饮料制造业务。
 ---
-`關注組` [轉載自GNews](https://gnews.org/zh-hans/1857882/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858167/)
 
-**撰文｜疫情关注组 / 发布时间｜14/1/2022**
-![](https://assets.gnews.org/wp-content/uploads/2021/10/2-94.jpg)
-**更多资讯请关注官方盖特（Please follow our Gettr：[https://gettr.com/post/pl6k0218bf](https://gettr.com/post/pl6k0218bf))**
+整理编辑：东京樱花团/peterwong
+![](https://assets.gnews.org/wp-content/uploads/2022/01/77.jpg)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2Fcdn.hk01.com%2Fdi%2Fmedia%2Fimages%2F3128189%2Forg%2Ff4cde0175a5af76aaa1bb555c8497867.JPG%2FdaBrfdL1gGo5w1lCkUDBNcLLBjPOZvoXvOkXyLzpF8g%3Fv%3Dw1920r16_9&amp;imgrefurl=https%3A%2F%2Fwww.hk01.com%2F%25E8%25B2)
+《日经亚洲评论》1月14日援引消息人士透露，日本麒麟控股（Kirin Holdings）计划以约1000亿日圆（8.74亿美元）的价格出售其与中共央企华润集团在中共国成立的软饮料合资企业中的所有股份。
 
-美国波士顿哈佛医学院马萨诸塞州总医院的一项正等待同行评审的研究表明，接受黑种草与蜂蜜联合疗法的 COVID-19 患者恢复速度惊人，研究发现，蜂蜜与黑种草联合疗法可在6天内就有效缓解疾病症状，而对照组则需要13天。
+麒麟最早将于下个月将其持有的华润麒麟饮料（China Resources Kirin Beverages）公司40%的股份出售给一家中国基金。此举将成为麒麟海外业务的转折点。麒麟正在对与这家中共国基金的合同进行最后调整，预计这家酿酒商将在其2022年的合并财务报表中记录销售收益。
 
-备注：黑种草（ Nigella Sativa），亦称为黑孜然（ Black Cumin）
+麒麟公司打算将其重点转移到利润更高的行业，如精酿啤酒，并远离中共国低迷的软饮料业务。
 
-参与该项研究的首席研究员，Sohaib Ashraf 博士表示，“当 COVID-19 开始肆虐的时候，我们就明白，这种疾病势必会对全球造成严重破坏，并将成为世界经济的重置按钮，因此，我们对已发表的任何声称对 COVID-19 有效的药物进行临床试验，结果令人失望。”
+华润麒麟饮料公司成立于2011年，麒麟持股40%，华润持股60%。麒麟在这家生产和销售茶和咖啡饮料的合资企业中投资了约330亿日圆。在中国，麒麟还通过一家全资的子公司生产其旗舰产品麒麟一番榨啤酒（Ichiban Shibori）。
 
-于是，Ashraf 博士和他的团队不得不对各种科学文献进行更广泛的研究，以寻找到一种安全，对病毒和其他微生物具有广泛功效的东西，且兼具抗炎、免疫调节和抗凝血的特性。
+《日经》认为，与华润合资的终结意味着麒麟将退出软饮料的生产，不过这家日本公司将寻求把其品牌授权给麒麟的前风险合作伙伴。
 
-**最后，他们发现了蜂蜜和黑孜然，Ashraf 博士将其描述为“完美组合”，“我们推断这种组合可以更有效地减轻疾病的严重程度、控制病毒复制以及治愈 COVID-19 患者。”**
+根据华润集团网站的介绍，华润的前身是于1938年在香港成立的“联和行”；1948年联和进出口公司改组更名为华润公司；1952年隶属关系由中共中央办公厅转为中央贸易部（现为商务部）；1999年12月，与外经贸部脱钩，列为中央管理；2003年归属国务院国资委直接监管，被列为国有重点骨干企业。
 
-**另外，他还指出，对于那些希望增强免疫能力的人来说，黑孜然补充剂和蜂蜜都是非常值得考虑的一种选择。**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/研究：蜂蜜與黑孜然聯合療法能有效促進-COVID-19-患者康復.jpg)
-#### **自然疗法安全有效**
+麒麟控股是一家位于日本的饮品、酒精性饮料以及制药工业公司，拥有麒麟啤酒品牌。其子公司分布于美国、澳大利亚、台湾、韩国、中国大陆、香港以及东南亚地区。
 
-据论文描述，这项研究主要在巴基斯坦进行，涉及 313 名患者，分别有中度或重度染疫症状，包括咳嗽、发烧、喉咙痛、鼻塞、呼吸急促，严重的还包括肺炎和呼吸窘迫（ARDS）。
+消息来源:
 
-在研究结束时，蜂蜜和黑孜然联合疗法组在 4 天（中度病例）或 6 天（严重病例）内就恢复正常，而对照组则至少需要 7-13 天。
+[传日本麒麟拟出售与华润合资企业所有股票](https://www.epochtimes.com/gb/22/1/13/n13502836.htm)
 
-令人惊讶的是，研究还发现，对照组的30天内的死亡率为 18.87%，而联合疗法组仅为 4%。也就是说，联合疗法能有效降低重症患者的死亡率。
-
-Ashraf 博士进一步解释指，患者通过这种治疗方案奇迹般地好转令团队非常欣喜，作为一种廉价、易获得的保健品，它既可以单独使用，也可以与其他药物配合使用，以获得附加效果，这可以显著减轻医疗保健系统的负担。”
-
-目前，为了证明它能否成为是世界上最安全有效的治疗选择之一，研究团队正计划用同样的方式进行更大规模的跨国试验。
-
-来源｜[NUTRA](https://www.nutraingredients-asia.com/Article/2020/11/25/Covid-19-RCT-Honey-and-black-cumin-seed-help-speed-up-recovery-in-Covid-19-patients)
-
+*校对：东京樱花团/喜马拉雅的微尘*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
