--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,19 +1,27 @@
 ---
-title: 东北广西甘肃90%活的人畜不分几千万杨改兰何谈卖国叛国
+title: 江泽民朱镕基家族盗卖领土掌控和田玉价UBS摩根为其洗钱
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1858649/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1858690/)
 
 视频链接：[2022年1月12日 文贵大直播- G|TV](https://gtv.org/video/id=61df44f3a6dfdd6031535439)
 
-**郭文贵先生：**你看中国东北、去广西、甘肃90（%）的人活的人畜不分，啥时候让你宣过誓？你卖啥去啊？杨改兰女士，她卖个牛毛都卖不着，她只能把孩子头砍了，她只能把她自杀，她一生只有一个权利——自杀的权利，而且自杀还是错了，最后所谓她的国家说，你自杀是因为你精神有毛病，杨改兰的事件，是中国人最好的样板。
+**郭文贵先生：**那么2002年的塔吉克斯坦这个土地交易背后是谁知道吗？去查查朱镕基跟他谈的啥？我郭文贵敢在世界的任何一个法庭告诉你，朱镕基、江泽民家族在那里拿到了天大的钱，到今天还在收钱。
 
-你知道中国有多少个杨改兰？我头两天跟那个李克强的原秘书我跟他说，他说，文贵啊！当年你一开始说杨改兰对我之震撼，他说我这个哥们不白交，他说就你这个说法，我跟着老板去过甘肃多次，河南还有他老家，中国现在就今天，就是说这几个月前说的话他是，中国最起码几千万个杨改兰。
+中国老百姓的无知是全人类我没有见过的。他们敢把国家的土地就这么卖出去，在那儿收着矿，而且协议很简单，永久这个公司拥有这个地方矿的开发权。
 
-他说可悲的事情，他们永远不会被人知道，他自杀他砍死100个孩子也没人知道，他只是偶然的被那个混蛋的宣传媒体拿来，用她的死来让别人不死的时候被你给逮住啦。
+昆仑玉，就是所谓的和田玉，你们这些傻子们！你见过真的是几吨重的和田玉吗？跟你说你可能不相信，那个价格全都是江、曾、朱之控制，比特币为啥是共产党搞起来的？就是江家搞起来的，他要把钱洗…不是洗白了要洗雪白呀！
 
-悲剧就在这儿呢！你的死都被拿来利用，结果让我们知道了，中国有多少…现在几千万杨改兰，谁要敢说中国没有几千万杨改兰，我R你八辈祖宗！
+为什么UBS成为中国第一个，外资允许的百分之百的这个执照？为什么摩根要拿证卷公司？都是王岐山、江家的，他洗钱需要工具啊，它需要水、需要池子、他洗完放哪去。
 
-你让联合国去查一查，我们今天面对几千万杨改兰的时候，还说我们是叛国、卖国，那么刚才问的问题，你懂啥叫叛国卖国吗？
+我告诉大家如果你不懂得什么叫叛国和卖国你这一辈子被骂叛国、卖国你就太冤了，你有资格叛国吗？有资格卖国吗？你就算个屁，是吧！你算个屁。
+
+就当时我在里边儿的时候，当时那个郑州裕达就是说我是美国的派来的特务，跟一个好莱坞的女人结婚了，然后就监视郑州的时候，我被找去了，他们说，郭文贵人家说你是叛国，我说是吗！我说你说我叛哪个国了？他说你真以为你叛国？你有资格叛国吗，？那叛国是共产党员在叛国，轮到你来说叛国了吗？
+
+就连一个郑州的一个所谓金水区的检察官、反贪局的副局长，都敢说我这话。后来这哥们儿被枪毙了，被被注射毒针死了，你可以查查去，一个人贪污两个多亿当年。
+
+所以兄弟姐妹们！你再看一看为啥我讲昆仑山脉？为什么讲帕米尔高原？为什么讲整个的西藏、喜马拉雅？喜马拉雅山上的秘密、西藏的矿藏、西藏的奇才异宝都去哪儿了？
+
+光在西藏，用当时的曾庆红的秘书说，我在西藏搜罗搜罗我分分钟搜罗个一百个亿、两百亿，分分钟啊！一个秘书都这么说，今天青青草原你坐这儿你还灭共呢，你连知道共产党邪恶的0.001（%）都没有。
 
 编辑整理：海贼王M.D.LUFFY；
 
