--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,32 +1,22 @@
 ---
-title: 澳大利亚第二次撤销德约科维奇的签证
+title: 美国最高法院否决拜登强制疫苗令
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1858629/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1858689/)
 
-#### 撰稿：彩虹
+撰稿：文西Eric
+![](https://assets.gnews.org/wp-content/uploads/2022/01/141.jpg)图片来源于网络
+据路透社报道：美国最高法院本周四否决了拜登总统对大型企业的新冠疫苗接种或测试授权，保守派法官认为这一政策对许多美国人的生命和健康造成了不适当的影响，同时认可了联邦对医疗机构的单独疫苗要求。
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-27.jpg)图片来源：milehighgears
-1月14日，BBC报道澳大利亚移民部长行使了自由裁量权（personal power of cancellation），再次取消了诺瓦克·德约科维奇（Novak Djokovic）的签证。
+法院以6:3的比例作出裁决，六位保守派法官占多数，三位自由派法官反对阻止对大型企业的规定——这项政策适用于8000多万名雇员。
 
-根据以往的报道，事件的起因是德约科维奇虽然因为曾经感染过新冠病毒而获得了新冠疫苗豁免权，但是澳大利亚边防部（Australian Border Force）认为德约科维奇未能提供合适的证据以符合澳大利亚的入境要求，甚至要取消他的签证。
+法院在上周五听取了关于两个联邦机构在11月发布的旨在提高美国疫苗接种率并使工作场所和医疗环境更加安全的临时任务的法律争论后采取了行动。这两起案件考验了总统应对不断扩大的公共卫生危机的权力，这一危机已经导致超过84.5万美国人死亡。
 
-1月10日，根据《澳洲新闻网》和《天空新闻台》的报道，联邦巡回法庭和家庭法庭已经撤销了对德约科维奇取消签证的决定，意味着他将参加澳大利亚公开赛。
+美国最高法院的这一法令，预计会带动其他西方国家效仿取消疫苗强制令，也再次验证七哥的情报准确性！
 
-但是，1月14日，周五晚上，在墨尔本，澳大利亚移民部长亚历克斯·霍克（Alex Hawke）根据《移民法》的个人权力取消了德约科维奇的签证，他在一份声明中说：“今天我行使了我的权力……以健康和良好秩序为由取消了诺瓦克·德约科维奇先生持有的签证，理由是这样做符合公众利益”。
+新闻来源：[Reuters](https://www.reuters.com/world/us/us-supreme-court-blocks-biden-vaccine-or-test-policy-large-businesses-2022-01-13/)
 
-报道说，这意味着德约科维奇可能面临三年内不得获得新的澳大利亚签证的禁令。同时，移民部长霍克的决定也意味着德约科维奇现在就面临被驱逐出境。而这位男子网球头号选手原定参加下周一（17号）开始的澳大利亚公开赛
-
-当然，这位34岁的塞尔维亚人仍然可以发起另一项法律挑战，以继续留在澳大利亚。
-
-根据报道，此前，德约科维奇回应了关于他在旅行表上做了虚假申报的指责，该指责称他在抵达澳大利亚之前的14天内没有旅行，而事实上他曾去过西班牙。
-
-他说这个错误是由他的经纪人犯下的，称其为“人为错误”，并补充说这是“非故意的”。他还承认，在对中共病毒（Covid-19）检测呈阳性后，他会见了一名记者并进行了拍照。
-
-**新闻来源**
-
-[Novak Djokovic: Australia cancels tennis star’s visa](https://www.bbc.co.uk/news/world-australia-59991762)
-
+*发稿：mgjxs*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
