--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,29 +1,26 @@
 ---
-title: 英军情五处警告议会：工党金主华裔女律师疑为中共间谍
+title: “韭菜”护“镰刀”现象的根
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1858621/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1858682/)
 
-翻译：zzballack
-上传：追着曙光跑
+澳喜文飞
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Picture1-7.png)图片为自主编辑
+我所说的“韭菜”护“镰刀”的现象就是我们常常面对的而又百思不得其解的——穷苦草根在言论上（至少是表面上言论）处处拥戴中共，处处为中共的所谓成就自嗨，即使这一些成就与他们没有毛关系；比如说：高楼大厦、政府的高级楼堂馆所、没有发动机的大飞机、冒黑烟的航母、还有常常会掉下来的长征火箭、落后20年的光刻机；细想一下这一些他们嘴里得强国的标志，似乎与他们的衣食住行没有任何关联，甚至还是用了他们的血汗换来的税金换取的，但是他们还是那么自豪！
 
-据英国《每日邮报》（Daily Mail）1月13日报道，英国军情五处（MI5）今天向国会议员们发送了一封电子邮件警告说，一名与前部长有联系的工党捐助者是一名中共间谍。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/WhatsApp-Image-2022-01-14-at-17.18.11.jpeg)图片来源：网络
-MI5警告说，长期在英国伦敦经营律师业务的李贞驹（Christine Ching Kui Lee）“为中共统战部从事政治干预活动，与国会议员等相关政治实体接触。她与英国政界人士有‘广泛接触’，为中共与现任议员和有意竞选成为国会议员的人‘建立了联系’，她向政界人士的捐款资金来自在中国和香港的非英国人。任何与她接触的人都应该‘注意她的隶属关系’及其‘推进中共议程的活动’。”
+今天我们就来讨论一下他们的思想根源，他们为什么那么嗨（自豪）？
 
-李贞驹的律所Christine Lee & Co Solicitors在伦敦、伯明翰和北京设有办事处，她是中共驻伦敦大使馆的首席法律顾问。除此之外，李贞驹还身兼多种职位：英国最大的华人律师行董事长、中共侨联特聘海外法律顾问、英国议会跨党派中国小组秘书长等等。
+他们是既得利益者吗？不是！他们大多是黎民百姓，顶多有一两套还在供房贷的房子，他们没有钱送孩子出国留学，他们可能还没出过国，哪怕是港澳新马泰（有报告显示，中共国只有一亿人有过出境记录），但是在他们的语境中他们又那么轻视一起外国！
 
-李贞驹向前工党党魁杰里米·科尔宾 (Jeremy Corbyn)盟友巴里·加德纳（Barry Gardiner）捐赠了50多万英镑，其中约20万英镑用于支付加德纳其中两名国会助手的薪资。她的儿子丹尼尔·威尔克斯(Daniel Wilkes)曾在加德纳议员的办公室工作，这意味着他有特权可以持员工证进入议会大楼(Parliamentary Estate)。加德纳议员一直支持中共更多地参与英国核工业的企图，包括欣克利角（Hinkley Point）发电厂。
+他们信仰共产主义？如果是那我会为他们无知的信仰敬礼的！其实他们不信也不懂！更没有读过共产党宣言（党不认为他配！）。
 
-据报道，李贞驹还向工党的其他部门捐赠了数十万英镑，她的公司在2005年向自由民主党捐赠了5000英镑，并在2013年向现任党魁、时任能源大臣的爱德·戴维 (Ed Davey)捐赠了5000英镑。她与保守党也有联系。10多年前，当中共跟英国的关系处于“黄金时代”时，李贞驹一度被英国官员奉为座上宾。例如，当中共代表团和政要访问英国时，她的身影经常出现在英国议会。2006年，李贞驹发起了一个所谓的“英国华人参政计划”，称让华人的声音得到英国社会重视。该计划得到英国政界的关注，甚至赢得了唐宁街的夸奖。李贞驹曾在2019年获得时任英国首相特雷莎·梅（Theresa May）颁发的“社群之光”（Points Of Light）奖章，以表彰她身为社群志工的成就。五年前，人们首次对她的资助提出质疑，但没有采取任何行动。
+他们既不得益，又不持信仰，但是他们处处拥护着割他们韭菜的镰刀！
 
-英国保守党议员和前任党魁邓肯·史密斯（Sir George Iain Duncan Smith）爵士1月13日在议会下院就军情五处的警告提问。他说，这是“一个严重关切的问题”，呼吁将李贞驹驱逐出境，并要求政府向下院作出解释。
+我思来想去似乎找到了他们的思想根源！那就是“黑社会英雄主义”！
 
-英国内政大臣普丽蒂·帕特尔 (Priti Patel)说，一个“代表中共故意从事政治干预活动的人把目标对准了议员，这是令人极为关切的，但英国已经制定了识别外国干预的措施。”
+黑社会里他们没有正邪之分，谁能霸到地盘谁就是老大！老大越狠就越多小弟追随！老大越猛老弟就越有自豪感，他们的自信心也随之而来，他们以他们老大的“强大”而自豪，我称之为黑社会英雄主义。
 
-英国官员的一个担忧是，目前没有法律应对干预。但他们相信公开事实是防控未来风险的最佳途径，正如现在军情五处所作的一样。
-
-信息来源：[MI5 issues urgent warning to Commons about Chinese lawyer trying to corrupt UK politicians: London-based solicitor has donated £500,000 to Corbynite Labour MP and her son worked in his office – until he quit today](https://www.dailymail.co.uk/news/article-10398665/MI5-send-urgent-email-MPs-warning-Chinese-woman.html)
-
+现在就不难理解韭菜们为割他们镰刀呐喊了吧！为中共呐喊的粉红们根本不信仰共产主义，他们只是为他们的老大“强大”而自豪吧！只要老大不强了，他们也就散了！ 有新中国联邦在，他们的老大“强大”不了几天了！他们也快散了.
+![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
