--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,34 +1,118 @@
 ---
-title: 2021年朝鲜网络犯罪盗窃加密货币达到顶峰
+title: 医生告诉立法者：必须允许父母决定孩子是否接种 (2/2)
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1858616/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1858668/)
 
-#### 撰稿：彩虹
+编译： Jenny Ball
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-26.jpg)图片来源：Stedmood
-1月13日，《国会山报》报道，根据周四发布的一份报告，朝鲜黑客在2021年盗取了近4亿美元的加密货币，达到其网络犯罪活动的顶峰。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image0-1-4.jpg)图片来源：Children’s Health Defense Team
 
-软件公司Chainanlysis(区块链分析公司)创立于2014年，总部位于美国纽约州纽约市，是一家为全球政府、加密货币交易所、国际执法机构、银行和企业提供区块链数据和分析软件，以帮助他们遵守合规要求、评估风险并识别非法活动的公司。
+“不管他们是民主党人还是共和党人，只要是正常的父母，他们都担心这是否会强制要求他们的孩子注射，”昆特说。
 
-根据Chinalysis的研究，朝鲜黑客已经有能力通过对加密货币平台的七次攻击中窃取到约4亿美元，从而在2020年到2021年，使得他们从这些攻击中获得的价值增长了40%。
+缅因州格林的马特·兰德里（Matt Landry）是 280 多名在三小时听证会上远程作证或写信的人之一。他告诉立法者，他“厌倦了这些违反人民意愿的注射，它们使人们生病、受伤或死亡。我看到它已经发生在我认识的人身上，这让我气愤至极。”
 
-根据该公司的研究，这些攻击主要影响了投资公司和集中式交易所。黑客使用的方法包括“网络钓鱼诱饵、代码漏洞、恶意软件和高级社交工程陷阱”，以便从平台上获取资金，并将其放入所谓的热钱包（Hot Wallet）。
+反对该法案的缅因州州长珍妮特·米尔斯告诉缅因州新闻中心：
 
-2021年，以太坊（Ethereum）占了朝鲜网络犯罪分子所盗资金的大部分，为58%。
+“现在是每位领导职位的人、每个公职人员、每个社区中担任领导角色的人行动的时候了，让人们了解这些疫苗的安全性和彻底测试的安全性，以及保持这些疫苗的重要性，会让你离开医院，让你远离重症监护室，让你免于死亡。”
 
-Chainalysis说：“一旦朝鲜获得了这些资金的保管权，他们就开始了谨慎的洗钱过程，以掩盖和兑现”。
+但纳斯告诉立法者，无论她怎么说这些疫苗的作用，**它们都不是“安全有效的**”。
 
-然而，黑客们似乎对他们偷来的所有加密货币的洗钱速度很慢。该公司的分析发现，大约有1.7亿美元的加密货币未经清洗，其中约3500万美元是通过2020年和2021年进行的黑客攻击偷窃到的。
+纳斯写道：
 
-正如Chainalysis在其报告中所说，朝鲜最近网络偷窃行动“呈现了一个大规模支持加密货币犯罪的国家形象。朝鲜政府通过系统且复杂的黑客活动，无论是通过拉撒路集团 (Lazarus Group)还是其他犯罪集团，在2021年已经将朝鲜政府塑造成为了加密货币行业的大规模持续威胁”。
+“‘安全有效’是 [U.S. FDA] 仅适用于许可药物和疫苗的“**艺术术语**”。美国目前所有可用的 COVID 疫苗，都是未经许可和实验性的，也就是研究性的。”
 
-文章报道，去年，司法部指控三名朝鲜人，分别是全昌赫（Jon Chang Hyok）、金日（Kim Il）和朴金赫（Park Jin Hyok），从美国相关组织窃取了13亿美元的现金和加密货币。据称，这三名黑客参与了2014年的黑客行动，但截至1月份，他们仍被认为是在逃状态。
+纳斯完整的证词如下：
 
-**新闻来源**
+2022 年 1 月 11 日
 
-[North Korean hackers stole almost $400M in cryptocurrency, report says](https://thehill.com/policy/cybersecurity/589661-north-korean-hackers-stole-almost-400m-in-cryptocurrency-report-says)
+尊敬的主席、议员和参议员，
 
+我写信是为了支持 LD 867。为什么在进行充分、全面的安全性研究之前阻止 COVID 疫苗授权是该委员会和立法机构的正确决定，原因有很多。
+
+1. COVID疫苗是实验性的
+
+首先，让我说，无论对这些疫苗怎么描述，它们都不是“安全有效的”。“安全有效”是 FDA 的“艺术术语”，可能仅适用于获得许可的药物和疫苗。**美国目前所有可用的 ****COVID ****疫苗，都是未经许可和实验性的，也就是研究性的**。
+
+药物和疫苗要么是许可产品，要么是实验产品。在美国法律中，**它们之间没有灰色地带**。无论研究是否明确进行，实验产品的使用（包括那些获得紧急使用授权的产品），**都属于《纽伦堡法典》和美国监管实验药物的法律**。正如前 FDA 专员斯蒂芬·哈恩（Stephen Hahn）他自己指出的那样，“EUA 产品仍被认为是研究性的。”
+
+根据 21CFR D 子章第 312 部分：“实验是对药物的任何使用，但在医疗实践过程中使用已上市药物除外。”疫苗被 FDA 视为药物的一个子集。因此，根据定义，使用未经许可的紧急使用授权疫苗是**实验性的**。
+
+美国法律要求：接受实验产品的人，必须提供书面知情同意书。然而，在制定创建紧急使用授权 (EUA) 的 PREP 法案时，对于将使用 EUA 产品的紧急情况，这一要求略有放宽。使用 EUA 时所需的披露规定如下：（**请注意接受或拒绝的选项**）
+
+21. U.S. Code § 360bbb-3 – 紧急情况下使用医疗产品的授权 (ii) 旨在确保告知接受该产品的个人的适当条件 —
+
+(I) 局长已授权紧急使用该产品；
+
+(II) 此类使用的重大已知和潜在利益和风险，以及此类利益和风险未知的程度和期权；
+
+(III) 接受或拒绝给予产品的选择权、拒绝给予产品的后果（如果有的话）、可用的产品替代品及其益处和风险。
+
+所有莫德纳、强生公司和所有儿童期的辉瑞-生物科技疫苗都在 EUA 下使用。虽然辉瑞-生物科技成人疫苗应该以 Comirnaty 品牌获得许可，但事实上，**目前在美国使用的辉瑞成人疫苗也是 ****EUA ****产品****。**
+
+**2. **虽然 FDA 许可了 Comirnaty，这是唯一获批的 COVID 疫苗，**但在美国使用的都是紧急使用授权（实验）疫苗。**
+
+尽管有相反的说法，但许可和品牌的 Comirnaty 尚未在美国用于管理。目前可用的辉瑞-生物科技疫苗，是根据紧急使用授权的，**该授权为制造商、分销商、管理员、计划规划者，以及几乎所有参与疫苗接种过程的其他人**，提供了广泛的责任保护。另一方面，品牌产品目前受普通责任索赔的约束。
+
+在 FDA 向 Comirnaty 颁发许可证的整整三周后，隶属于 NIH 的国家医学图书馆发布了信息，**称辉瑞公司不打算在 ****EUA ****疫苗仍然可用的情况下，****在美国提供 ****Comirnaty**。
+
+辉瑞公司的 COVID-19疫苗获得 FDA BLA 许可
+
+辉瑞公司的 COVID-19 疫苗于 2021 年 8 月 23 日获得 FDA BLA 许可，用于 16 岁及以上的个人（COMIRNATY）。当时，FDA 发布了一份 BLA 包装插页，其中包括获批的新 COVID-19 疫苗商品名 COMIRNATY，并列出了 2 个新的 NDC（0069-1000-03、0069-1000-02）和带有新商品名的标签图像。
+
+目前，辉瑞不打算在未来几个月内生产任何带有这些新 NDC 和标签的产品，而 EUA 授权产品仍然可用并可供美国分销。因此，在辉瑞确定何时生产带有 BLA 标签的产品之前，CDC、AMA 和药物纲要，可能不会发布这些新代码。
+
+**FDA ****在获得疫苗许可的同一天，延长了疫苗的 ****EUA ****授权**。
+
+**FDA ****似乎已经同意白宫要求该疫苗获得许可**，以允许它被授权用于美国大部分人口。根据 EUA规定，潜在的接受者有权拒绝，不能强制执行。因此，颁发的许可证，允许政府告知公众疫苗已获得完全批准和许可。但事实上，公众无法获得许可疫苗。
+
+为什么要执行这个复杂的监管过程？在 EUA 下，辉瑞拥有几乎防弹的责任盾。根据 2021 年 9 月 23 日国会研究服务处 (CRS) 的说法，“法院已将 PREP 法案豁免描述为‘全面’。”CRS 解释说，“PREP **法案使受保护的人免于承担与相关损失相关的所有索赔的法律责任，涵盖的对策的管理或使用**。”
+
+3. FDA 指示辉瑞-生物科技，FDA 国会授权的数据库不足以评估心肌炎（和其他潜在的 COVID 疫苗副作用）的危险，因此 ，**辉瑞生物科技必须在未来六年内开展研究以评估这些风险**
+
+2021 年 8 月 23 日，FDA 向 Comirnaty 颁发许可证的当天，FDA 指示辉瑞-生物科技没有充分了解该产品的严重潜在风险，并要求制造商辉瑞和生物科技进行一系列研究评估这些潜在风险。这些研究将在两种产品上进行：**获得许可的 ****Comirnaty ****和 ****EUA ****辉瑞****–****生物科技疫苗。**请注意，它们包括对妊娠期安全性研究的要求，该研究要到 **2025 ****年** **12 ****月 ****31 ****日才能完成**。
+
+我直接从发送给辉瑞-生物科技的 FDA 批准信的第 6-11 页，复制了 FDA 关于以下这些必需的安全研究的部分内容。
+
+**4.WHO****不建议正常儿童接种****COVID****疫苗**
+
+WHO网站“谁应该接种疫苗”声明如下：
+
+与成年人相比，儿童和青少年的疾病往往较轻，因此，**除非他们属于严重 ****COVID-19 ****风险较高的群体**，为他们接种疫苗的紧迫性，低于老年人、患有慢性疾病的人和卫生工作者。
+
+需要更多关于在儿童中使用不同 COVID-19 疫苗的证据，**以便能够就为儿童接种 ****COVID-19 ****疫苗提出一般性建议**。
+
+WHO战略咨询专家组 (SAGE) 得出结论，辉瑞-生物科技疫苗适合 12 岁及以上人群使用。12 至 15 岁的高危儿童，可以与其他优先接种人群一起接种这种疫苗。针对儿童的疫苗试验正在进行中，当证据或流行病学情况需要改变政策时，WHO将更新其建议。
+
+如果WHO认为没有足够的证据支持对正常儿童进行一般疫苗接种，那么该委员会和缅因州立法机构为什么会不这么认为呢？
+
+总结：
+
+• 所有可用的COVID 疫苗都是实验产品。
+
+• 在法律上，接种者必须有权拒绝。
+
+• 授权否定拒绝权。
+
+• 有关疫苗的基本安全问题尚未解决，有些问题要到 2027 年才能得到解答。
+
+• WHO不建议为儿童接种广泛的 COVID 疫苗。
+
+• 应允许父母就其子女接种 COVID 疫苗的风险和益处做出个体化决定。
+
+• 不幸的是，在公众获得关于安全性和有效性的完整信息之前，没有人可以对 COVID 疫苗做出完全知情的决定，而这些信息现在不可用。仅这一事实就应该否定所有授权。
+
+非常感谢您的关注。
+
+梅丽尔·纳斯，医学博士
+
+**参考资料：**[childrenshealthdefense.org][Parents Must Be Allowed to Decide on COVID Vaccines for Kids, Physician Tells Maine Lawmakers](https://childrenshealthdefense.org/defender/meryl-nass-parents-decide-covid-vaccines-kids/?utm_source=salsa&amp;eType=EmailBlastContent&amp;eId=b5be3851-e217-4fa4-afa8-e0ddac5c9bfd)
+
+* * *
+
+*审核：文乐*
+*校对 : 信心满满*
+*发布：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-1.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
