--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,24 +1,38 @@
 ---
-title: 拜登承认对COVID没有联邦解决方案
+title: 突然炸雷！200亿市值“国际医学”直接被ST
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1858330/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1858509/)
 
-翻译：Julia Gao
-校对：精靈藍
-剪辑/字幕：文驰
-编辑：Mttfly
+#### 【雅典娜快讯】，紧贴时代脉搏
 
-美国总统拜登在一场视频会议中说：“没有任何一个联邦方案能在州一级得到解决。那纯粹是拿各州做实验，来验证联邦方案是否可以行得通。”福克斯国家频道主持人汤米·劳伦评论道：“这可能是一个典型的弗洛伊德式错误的案例。拜登承认确实没有联邦解决方案，他确实没有计划解决COVID问题。可就是在不久前他的几条推文被发现，他在大流行病开始时，对唐纳德·特朗普总统没有新冠解决方案而进行了批评。”
+整理报道：BENJ1
+编辑：Kelly
 
-视频链接：[Biden admits there is no federal solution for COVID](https://video.foxnews.com/v/6288978896001)
+- ![文章配图](https://assets.gnews.org/wp-content/uploads/2022/01/image-936.png)图片来源：雅典娜设计组
 
-*发布：Mttfly*
-**
+
+A股上市公司又炸了一雷。
+
+1月13日晚间，国际医学（000516，SZ）发布公告称，股票自1月17日起被实施其他风险警示。
+
+此前，因“西安孕妇流产”“心梗患者去世”事件，其下属两家医院遭停业整顿3个月。
+
+经西安市卫生健康委员会研究，对两家医院作出停业整顿3个月，期满整改合格后重新开诊等处理意见。根据规定，该事项触发了“上市公司股票被实施其他风险警示”的相应情形。公司股票自1月14日开市起停牌一天，自1月17日开市起复牌。公司股票自1月17日开市起被实施其他风险警示，公司股票简称由“国际医学”变更为“ST国医”。
+
+1月13日上午开盘后不久，国际医学直线跌停封板，全天封死跌停，卖单超76万手，最新市值为190.5亿元。
+
+截至2021年第三季度末，国际医学普通股东户数已经超过14万户，估计部分持股者今晚忐忑难眠了。
+
+参考新闻：
+[https://finance.sina.com.cn/stock/s/2022-01-13/doc-ikyakumy0193264.shtml?cre=tianyi&mod=wftop&loc=7&r=0&rfunc=56&tj=cxvertical\_wap\_wftop&tr=182](https://finance.sina.com.cn/stock/s/2022-01-13/doc-ikyakumy0193264.shtml?cre=tianyi&amp;mod=wftop&amp;loc=7&amp;r=0&amp;rfunc=56&amp;tj=cxvertical_wap_wftop&amp;tr=182)
+
+发布：tianzhihuan
+
 更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
 [澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/Nz26pG64XF)
 [澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
