--- a/gnews/36.md
+++ b/gnews/36.md
@@ -1,54 +1,64 @@
 ---
-title: 新中国联邦扼住无良媒体的咽喉，力王狂澜扭转排华大势
+title: 南非高校强制接种疫苗迎来转机，将按普通流感治疗中共病毒
 ---
-`YALUN 亚伦` [轉載自GNews](https://gnews.org/zh-hans/1858304/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/1858497/)
 
-新西兰伊甸农场Gnews组 财经G乐部-亚伦
+作者：香草山健身部 – 正道新闻
+![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
+2021年10月8日，为了准备2022年新一年的开学季，南非政府部门——高等教育和培训健康与发展中心召集了南非26所大学的学生代表委员会、校长参加了一次闭门会议。会议主要的议题在于就大学强制性疫苗接种的监管问题进行咨询。
 
-1月12日，郭文贵先生于GTV、Gettr大直播中再度提及Isobel Yeung（杨贝贝），称她是有计划地和中共合作，HBO、VICE和Q组织，都是中共五年前设下的致命局。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Wolverine.jpg)图片来源Gettr Wolverine
+从会议纪要中，我们可以发现，与会的南非高校对于疫苗的态度大致上分为两种：第一种以开普敦大学为代表的“强制派”。他们主张，从2022年1月1日起，作为注册条件，所有教职员工和学生提供可接受的证明，证明他们已接种过中共疫苗。那些申请学习或就业的人，以及访客和服务提供商，将被要求接种疫苗。
 
+![](https://researchresearch-news-wordpress-media-live.s3.eu-west-1.amazonaws.com/2021/10/no_vaccine_no_entry_sign-738x443.jpg)
 
-Isobel Yeung是四年前开始跟中共合作，从此踏上抹黑郭先生的不归路。一年前开始谋划此次采访，目的是把郭先生、新中国联邦定义为邪教组织，把所有海外的反共华人都定义为暴徒，而Q组织是通过散布虚假信息带把人向阴沟的铺垫。
+对此，金山大学大学、约翰内斯堡大学也表示出了相似的观点。金山大学大学负责人Shirona Patel 表示，他们正在就是否应该让选择不接种疫苗的学生进行日常健康检查、戴上 N95 口罩并自费每周进行中共病毒测试进行咨询。如果咨询通过，访问大学的人员也将照此标准执行。
 
-臭名昭著的Q组织一直在各类社交媒体里兴风作浪，善于把一件简单的事情复杂化，把不可能为之的行动变成必须执行的“正义”。如果当时新中国联邦不及时制止做正式切割，大部分战友会跟着Q组织走偏。
+相比之下，也有很多高校表示完全不同以强制接种疫苗的做法。
 
-事实上，Q组织100%是美国和共产党之间较量的一个平台，而且绝对是共产党控制的一个造谣平台，这一点毋庸置疑。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/银河系农场.jpg)图片来源Gettr 银河系农场
+比勒陀利亚大学副校长 Tawana Kupe 教授明确表示，我们并不热衷于强制接种疫苗。关于一般的强制性疫苗接种，我目前不赞成。我们应该给予鼓励、说服和同行讨论的机会，使人们能够做出接种疫苗的决定，而不是强迫。
 
+夸祖鲁-纳塔尔大学发言人 Normah Zondo 说：大学期望员工和学生在自愿的基础上接种疫苗，这是基于他们对减轻传播和保护免受致命病毒的重要性的了解。
 
-Q组织跟HBO和Isobel Yeung一样，想把新中国联邦打造成邪教集团，传播假消息的造谣窝点，这也是中共的核心目的。因为HBO、VICE、包括Q组织，收了中共的黑金就要做事兑现。
+虽然这次讨论没有出现一个大家都能接受的成果。但是政府借此机会了解到了各高校对待疫苗的态度。
 
-现在我们知道，他们背后的金主是江志成、吴征。这场四五年前便开始启动的媒体阴谋，招招致命、 步步惊心。
+2021年11月23日，高等教育、科学和技术部长Blade Nzimande暗示，大学疫苗的要求会成为整个教育系统的要求。“南非大学已经为大学准备了指导方针，以在他们讨论强制疫苗接种时考虑和指导他们。”
 
-**欧美排华、排亚裔情况已开始显现**
+当部长发表意见的一周之后，12月1日，威特沃特斯兰德、斯泰伦博斯、西开普和自由州的大学已批准在 2022 学年实施某种形式的强制性疫苗接种。最初不同意强制接种疫苗的高校，也不得不做出让步。
 
-在加拿大的商场里白人女士对着华裔狂吠，声称是华人把病毒带到世界；在新加坡的商场，有人用马来语骂华人就该被杀，是华人把病毒带到世界；在日本，有人狂骂华人快滚回去，是华人把病毒带到世界，日本人要报仇；在欧洲和美国的院校，已经开始在私下排斥中国学生，甚至是排斥亚洲学生。
+众所皆知的是PCR测试在中共病毒测试上非常的不准确，很难区分普通的流感病毒和中共病毒。即便如此，2022年1月13日，NEWS24报道，虽然南非夸祖鲁-纳塔尔省省内大学将不会要求教职员工和学生完全接种疫苗才能进入校舍，但是必须提供48小时内PCR测试结果。尽管，我们不必猜测夸祖鲁-纳塔尔省出台这项政策的目的，但是实际上，这种方式无疑会迫使学生更多的接受疫苗。
 
-一股当年印尼大排华前奏的味道，而且是世界性的。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1059.png)
 
-回看这个Isobel Yeung精心打造的栽赃视频视频，如果没有郭先生和爆料革命的提前预判，如果没有切实可行反击谎言的行动，针对华人的惨案会真的像野火烧山脉一样迅速蔓延。
+2022年1月1日至24日，是南非高校注册日。如果截止到1月24日，南非绝大多数的高校仍然强制要求学生注射疫苗，结合正道新闻此前的报道，南非学生联盟将会采取一切手段抵制高校的疫苗强制令。此前学生联盟表示为此不排除司法起诉，罢课、游行等手段。
 
-**Isobel Yeung才是邪教的传播者**
+似乎一场学生于高校之间的矛盾一触即发之时，南非国家卫生部门的代理总干事，Nicholas Crisp的发言可能会改变现在的学生于高校之间的对立局面。
 
-邪教组织的六个特征：教主崇拜，精神控制，编造邪说，聚敛钱财，秘密结社，对抗社会。
+Nicholas Crisp在南非媒体eNCA采访时谈到，南非可能已准备好从将中共病毒由之前流行病转变为地方病，这意味着该病毒将得到与流感类似的治疗。一旦病毒的不再对人群起到致命性威胁之后，相关的疫苗政策，隔离政策也将会重新书写。此时南非高校与学生之间的矛盾也就迎刃而解。
 
-Isobel Yeung才是邪教的传播者，通过洗脑主控，制造歪门邪说。VICE媒体悍然制造大型种族仇恨，属于反社会行为。
+参考文献
+1. [南非学生联盟反击高校强制接种疫苗政策](https://gnews.org/zh-hans/1844329/)
+2. [eNCA on twitter](https://twitter.com/eNCA/status/1481495669407948802)
+3. [Jabs not mandatory at KZN varsities, but PCR tests required](https://www.news24.com/witness/news/kzn/jabs-not-mandatory-at-kzn-varsities-but-pcr-tests-required-20220113)
+4. [Who We Are](https://higherhealth.ac.za/about-us/who-we-are/)
+5. [Registration for the 2022 academic year opens on 4 January 2022](https://www.unisa.ac.za/sites/corporate/default/News-&amp;-Media/Calendar-&amp;-events/Events/Registration-for-the-2022-academic-year-opens-on-4-January-2022)
+6. [Five South African universities make Covid jabs mandatory](https://www.researchprofessionalnews.com/rr-news-africa-south-2021-12-five-south-african-universities-make-covid-jabs-mandatory/)
 
-**中共用思想毒瘤袭击美国**
+![](https://cdn.discordapp.com/attachments/873743101305430037/926527191443972196/2c3ff12a-1aad-413c-bcbf-f68f4a054055.jpg)
 
-桥水基金公司的创始人Ray Dalio管理着上万亿美元的资产，他跟他儿子就是中国的白手套和吸血鬼。Ray Dalio对中国人的伤害不可想象，将来一定会受到美国的严厉审判。中共正在中国如火如荼地大搞共享财富的同时，现在他也要在美国搞共享财富。而共享财富的实质，就是利用共产主义把社会财富共产到几个家族去。
+**校对/发稿：童谣**
 
-**相关****Gnews****链接：**
+**更多资讯，更多关注**
 
-大料！Isobel Yeung的污蔑视频是北京欲取消中美贸易关税的阴谋
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
 
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
 
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
 
-> [大料！Isobel Yeung的污蔑视频是北京欲取消中美贸易关税的阴谋](https://gnews.org/zh-hans/1781930/)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
-
-
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
