--- a/gnews/49.md
+++ b/gnews/49.md
@@ -1,25 +1,18 @@
 ---
-title: 首派自卫队出征海湾战争的前日本首相海部去世
+title: GETTR是全球华人能向世界自由发声的唯一平台
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858067/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1858177/)
 
-撰稿：东京樱花团/待命（文晓）
-![](https://assets.gnews.org/wp-content/uploads/2022/01/2-30.png)（图片源自本文链接）
-1月4日时事通信社消息：出生于名古屋的日本前首相海部俊树于9日去世，享年91岁。
+文编：东京樱花团/樱花传媒
+视频：东京樱花团/中文小视频组
 
-1991年海湾战争之后，他派出海上自卫队扫雷艇到波斯湾扫雷，这是日本自卫队第一次全面的海外部署。在征兵丑闻发生后，人们对政治的不信任感越来越强。为此，未能实现他所设定的政治改革目标，就被迫下台。
+1月5日，郭文贵先生在GTV大直播指出：
 
-1989年8月，宇野内阁因妇女丑闻而垮台后，他成为第76任总理。他是河本派的成员，这是一个小派别，但得到了最大派系的竹下派的支持，由于他的清廉形象，任职了约两年零三个月。
+盖特是全世界的华人,可以用华语自由说话讲故事的平台。盖特是能让外国人明白中共不等于中国人的平台。中共支持的邪恶媒体VICE,已把黄种的整个亚裔推向了西方民主的对立面、推向了白人黑人的对立面,在这千难万险之时,也只有盖特,能让所有的黄皮肤人把真相说清楚。
 
-他在学生时代就成为议会秘书，1960年首次从原爱知县第三区当选为众议院议员，此后共当选了16次。
-
-信息来源：[海部元首相が死去　湾岸戦争巡り自衛隊初派遣（共同通信） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/08c3266a3e1ced3a258e2cad5d00bcd06a376694)
-
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
+*编辑：东京樱花团/墨然
+发布：东京樱花团/平安卿卿*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
-
-
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
