--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,22 +1,54 @@
 ---
-title: 美国最高法院否决拜登强制疫苗令
+title: 丑闻缠身的左媒CNN收视率暴跌90%
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1858689/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1858718/)
 
-撰稿：文西Eric
-![](https://assets.gnews.org/wp-content/uploads/2022/01/141.jpg)图片来源于网络
-据路透社报道：美国最高法院本周四否决了拜登总统对大型企业的新冠疫苗接种或测试授权，保守派法官认为这一政策对许多美国人的生命和健康造成了不适当的影响，同时认可了联邦对医疗机构的单独疫苗要求。
+**翻译：Lulumi**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/屏幕截图-2022-01-14-103939.jpg)图片来源:nypost.com
+根据尼尔森收视率显示，杰夫·扎克领导的CNN在1月3日这周的平均收视率只有54.8万，与2021年同一周的近270万收视率相比，有了很大的下降。
 
-法院以6:3的比例作出裁决，六位保守派法官占多数，三位自由派法官反对阻止对大型企业的规定——这项政策适用于8000多万名雇员。
+去年的收视率受益于左翼媒体对1月6日美国国会大厦袭击事件的报道，导致CNN创下了自特德·特纳1980年创办该新闻机构以来收视率最高的一天。
 
-法院在上周五听取了关于两个联邦机构在11月发布的旨在提高美国疫苗接种率并使工作场所和医疗环境更加安全的临时任务的法律争论后采取了行动。这两起案件考验了总统应对不断扩大的公共卫生危机的权力，这一危机已经导致超过84.5万美国人死亡。
+但在袭击事件一周年之际，观众转向了CNN的右翼竞争对手福克斯新闻，福克斯新闻对该事件的报道在收视率上名列前茅。
 
-美国最高法院的这一法令，预计会带动其他西方国家效仿取消疫苗强制令，也再次验证七哥的情报准确性！
+CNN一直受到一连串丑闻的困扰，最引人注目的是其黄金时段明星主播克里斯·库莫被解雇，因为他被发现秘密协助其陷入困境的哥哥、前纽约州长安德鲁·库莫的性骚扰指控辩护，导致其辞职。
 
-新闻来源：[Reuters](https://www.reuters.com/world/us/us-supreme-court-blocks-biden-vaccine-or-test-policy-large-businesses-2022-01-13/)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/屏幕截图-2022-01-14-103753.jpg)CNN世界总部，CNN的收视率在新年的第一周就出现下滑。
 
-*发稿：mgjxs*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1064.png)前CNN主播克里斯·库莫
+
+CNN的长期老板扎克上个月因该电视台的低收视率和处理有关网络明星库莫和唐·莱蒙的丑闻而受到抨击。
+
+莱蒙是库莫被解雇前的晚上10点节目主持人，他面临着自己的道德丑闻。这位黄金时段的主播因报道朱西·斯莫利特的审判受到批评，因为这位演员在法庭上作证说，主持人通过短信告知他，芝加哥警方不相信他是种族主义仇视同性恋者袭击的受害者。
+
+莱蒙还被一名汉普顿的酒保起诉，他声称这位同性恋主播，在2018年揉搓自己的生殖器，然后把手指塞到他脸上。
+
+莱蒙否认了该酒保的指控。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1067.png)CNN黄金时段主播唐·莱蒙去年面临自己的丑闻，包括向《帝国》演员朱西·斯莫利特透露警方对其袭击的调查。
+
+据《野兽日报》报道，CNN的收视率下降是在该电视台有史以来收视率第二高的一年之后发生的。尽管有创纪录的一年，但在2021年下半年，网络收视率呈下降趋势。根据尼尔森的数据，虽然CNN在黄金时段晚上8点到11点之间努力抢夺观众，但仍然有83%的同比下降。 在2021年的第一周，它的黄金时段总观众人数为420万，上周只有70.5万。
+
+在今年的第一周，CNN的总观众人数录得同比下降80%。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1069.png)CNN的老板杰夫·扎克在处理这个陷入困境的CNN最近的丑闻方面面临批评。
+
+它还失去了其关键人群中89%的黄金时段观众和91%的18至49岁的观众。
+
+CNN没有回应评论请求。
+
+新闻来源 :[nypost.com][Scandal-ridden CNN sees ratings dive by 90% after 2021 coverage](https://nypost.com/2022/01/12/cnn-sees-ratings-dive-by-90-from-2021-coverage/)
+
+* * *
+
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-1.jpeg)
+
+
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
