--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,26 +1,32 @@
 ---
-title: “韭菜”护“镰刀”现象的根
+title: 西亚足球联赛再次有球员突发倒地
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1858682/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1858705/)
 
-澳喜文飞
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Picture1-7.png)图片为自主编辑
-我所说的“韭菜”护“镰刀”的现象就是我们常常面对的而又百思不得其解的——穷苦草根在言论上（至少是表面上言论）处处拥戴中共，处处为中共的所谓成就自嗨，即使这一些成就与他们没有毛关系；比如说：高楼大厦、政府的高级楼堂馆所、没有发动机的大飞机、冒黑烟的航母、还有常常会掉下来的长征火箭、落后20年的光刻机；细想一下这一些他们嘴里得强国的标志，似乎与他们的衣食住行没有任何关联，甚至还是用了他们的血汗换来的税金换取的，但是他们还是那么自豪！
+作者 台湾宝岛农场 Y.M.O
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-180.jpeg)
+在2022年卡塔尔星级联赛赖扬主场战胜沃克拉的比赛中，效力于沃克拉的马里国脚奥斯马内·库利巴利为了防守哈梅斯·罗德里格斯禁区外的吊射回追至本方球门内，不过在皮球飞出横梁后库利巴利却突然倒地，场上众人第一时间以为库利巴利是无接触受伤，但是发现库利巴利在球门内抽搐。就在场上其他人都不知所措时，哈梅斯·罗德里格斯第一个反应过来并且迅速冲上前对库利巴利进行施救，调整了后者的头部姿势，帮助其改善呼吸状况。随后医护人员及时入场救治，成功救回一命。当时赖扬1:0领先沃克拉，但在库利巴利倒下后由于情况的严重性和危险性双方球队均同意停止比赛，并保留剩余时间和比分。过几天双方重新将比赛踢完，赖扬3:0获胜。
 
-今天我们就来讨论一下他们的思想根源，他们为什么那么嗨（自豪）？
+后来经沃克拉的队医确认，库利巴利在比赛中突发心脏病，如果当时急救不及时世界足坛将会再多出一场悲剧。目前库利巴利已经被送到哈马德医院留院治疗。近一两年足球运动员由于心脏问题被迫下场，以及突然倒地甚至死亡的人数史无前例地激增，维基百科已经停止更新了在比赛中死亡的足球运动员人数。欧洲杯上丹麦国脚埃里克森就出现了类似的状况，好在同样及时进行急救处置才逃过一劫。加盟巴萨的阿奎罗在比赛中因为胸口不适从而进行了详细的检查，最终他被告知职业生涯无法再继续下去，只能选择在33岁的年纪退役，十分让人遗憾。另外包括曼联中卫林德洛夫和那不勒斯中场泽林斯基也在比赛中由于呼吸困难而被换下，世界顶级比赛中都已经出现这么多状况更不用说基数更大的低级别比赛了。
 
-他们是既得利益者吗？不是！他们大多是黎民百姓，顶多有一两套还在供房贷的房子，他们没有钱送孩子出国留学，他们可能还没出过国，哪怕是港澳新马泰（有报告显示，中共国只有一亿人有过出境记录），但是在他们的语境中他们又那么轻视一起外国！
+这还算是比较好的结果，因为他们目前都还活着，即使是今后无法再踢球，在生死面前都变得不值一提，但不是所有的球员都能被保住性命。12月22日阿曼马斯咯特俱乐部后卫哈立德·拉卡迪在赛前热身时突然倒地，最终不幸去世年仅29岁。埃及球员艾哈迈德·阿明、阿尔及利亚球员索菲安·卢卡、克罗地亚球员马林·卡西奇、危地马拉球员马科斯·梅纳尔多也都在由于心脏及呼吸问题不幸去世的名单之列。
 
-他们信仰共产主义？如果是那我会为他们无知的信仰敬礼的！其实他们不信也不懂！更没有读过共产党宣言（党不认为他配！）。
+我在叙述哈立德·拉卡迪突然倒地身亡的文章中提到过运动员由于心脏问题离开球场的可能性就应该为0的。即使级别再低但足球运动员的健康检查也比我们普通人要严密得多，如果说不从事特定职业的普通人如果出现心脏问题尚且还算说得通，那就算从胜利的角度来看球队也不可能让有着健康隐患的球员留在场上然后自己面临少一名主力球员的窘境。但是这种违背常理的状况现在就这么发生了，只能说背后的力量隐藏很深且十分庞大。而在这些异常事件停止之前我们也要一遍遍地提出问题，宣传真相。
 
-他们既不得益，又不持信仰，但是他们处处拥护着割他们韭菜的镰刀！
+P.S.倒地的球员为马里国脚奥斯马内·库利巴利，不是那不勒斯的主力后卫卡列杜·库利巴利。
 
-我思来想去似乎找到了他们的思想根源！那就是“黑社会英雄主义”！
+新闻链接
 
-黑社会里他们没有正邪之分，谁能霸到地盘谁就是老大！老大越狠就越多小弟追随！老大越猛老弟就越有自豪感，他们的自信心也随之而来，他们以他们老大的“强大”而自豪，我称之为黑社会英雄主义。
+[https://www.dailymail.co.uk/sport/football/article-10396275/James-Rodriguez-performs-life-saving-opponent-Ousmane-Coulibaly-suffers-cardiac-arrest.html](https://www.dailymail.co.uk/sport/football/article-10396275/James-Rodriguez-performs-life-saving-opponent-Ousmane-Coulibaly-suffers-cardiac-arrest.html)
 
-现在就不难理解韭菜们为割他们镰刀呐喊了吧！为中共呐喊的粉红们根本不信仰共产主义，他们只是为他们的老大“强大”而自豪吧！只要老大不强了，他们也就散了！ 有新中国联邦在，他们的老大“强大”不了几天了！他们也快散了.
-![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1.jpg)
+* * *
+
+***更多资讯***
+[台湾农场精彩文章](https://gnews.org/zh-hant/author/taiwangnews/)
+[台湾农场精彩直播影片](https://gtv.org/user/5f60d588245d3c0579acdbec)
+[订阅台湾宝岛农场官方YOUTUBE频道](https://www.youtube.com/channel/UCXlInG8cGCHSN5y54zcgoOw/videos)
+[点击此处加入「台湾宝岛农场」Discord伺服器](https://discord.gg/zE5xTQzArt)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
