--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,72 +1,52 @@
 ---
-title: 7•24系列——上合组织构建“后独裁世界帝国”版图
+title: “穿西装的精神病人”正逍遥法外！ 为什么？（1/2）
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1858666/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1858696/)
 
-整理：雅典娜情报组
-编辑：MSGZ
+翻译： Jenny Ball
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/a1642151019513.jpg)图片来源：cn.chinadaily.com
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1062.png)图片来源:childrenshealthdefense.org
 
+在今天的美国，如果你毒杀你的妻子以赚取 150,000 美元的人寿保险金，你可能最终会入狱——但如果你毒杀数十万人，这样，你就可以拿到数百万美元的薪水 ，你可以买一艘新游艇。
 
-**郭文贵先生在2022年1月12日的大直播中谈到**，在江泽民与朱镕基当政时期如何出卖帕米尔高原领土，以换取阵营利益与地缘战略的实施空间。并提到当初江泽民、朱镕基发起成立的上海合作组织（SCO、ШОС）就是为了服务于这个目标。
+阿尔弗雷德·鲁夫（Alfred Ruf）毒死了他的妻子，这是他骗取人寿保险致富的计划。 格雷戈里·丹尼斯（Gregory“Brent”Dennis）博士也做了同样的谋杀，他正在等待 200 万美元的保险赔付。约书亚·亨萨克（Joshua Hunsucker）毒害了他的妻子，仅得到了 250,000 美元的人寿保险金，因为其中 80,000 美元用于购买了一艘游艇。大卫·佩蒂斯（David L. Pettis）毒害了他的妻子也得到了150,000 美元。
 
-**通过分析和解构得以看到，中共利用这个组织作为谈判交易平台，充实和强壮以自我利益为主张的帮派阵营，用以达到渗透和消解由其它国家形成的既有国际战略同盟，提升独裁政体话语权。通过出卖国家利益作为诱饵，体现独裁统治模式的优越性，诱变合作国家的政治生态，以此达到意识形态输出、制度输出、扩展阵营范围、稳固同盟体的目的。其成立的初始和终极目的，是为了抗衡美国对于内亚和东亚的强大地缘影响力。**
+我不知道毒杀我父亲和我兄的人的名字，他们上周四都去世了，但我知道那些人在哪里工作，以及他们为什么这样做：就像鲁夫、丹尼斯、亨萨克和佩蒂斯一样，当他们将石棉卖给我父亲的雇主，并让我的兄弟沉迷于烟草时，他们是故意的，他们明知会导致死亡，他们故意那样做的。
 
-上合组织的前身，是中国与俄罗斯、哈萨克斯坦、吉尔吉斯斯坦和塔吉克斯坦为解决边界（个人政治利益的交换）问题建立的五国元首会晤机制。然而，由于对在2001年即将上任美国总统的拥有共和党身份的小布的不良预期，这进一步激发了中共的危机意识。小布什把中共政权视作战略竞争对手、发表了对保护台湾的强硬主张，以及其与俄罗斯普京关系的逐渐热络，均深深地触痛中共的神经。
+石棉（1）行业早在 1890 年代就知道，并在 1940 年代得到明确证实，他们的产品会导致间皮瘤，这导致特别残酷地杀死我父亲的肺癌。
 
-于是，上海合作组织也就在这个时局变化的关键点适时的出现了。建立之时正是美俄关系热络之际。有观察人士认为，中国希望通过上合组织的成立，能够遏制美国在中亚地区的影响。
+（注释1: 石棉纤维吸入人体会沉积在肺部，造成肺部疾病。人如果暴露于石棉粉尘可导致肺癌，胃肠部癌，胸膜或腹膜的间皮癌以及石棉沉着病—石棉肺。国际癌症研究中心已肯定石棉为**致癌**物。）
 
-上海合作组织（SCO、ШОС）自2001年6月15日宣布成立，目前已有6个成员国，分别是哈萨克斯坦共和国、中华人民共和国、吉尔吉斯斯坦、俄罗斯联邦、塔吉克斯坦共和国、乌兹别克斯坦共和国。2021年9月17日起启动伊朗成为正式成员国程序。
+**但是即使在今天，他们的高管也在试图逃避责任**：强生公司正在玩破产游戏，以避免为他们的石棉滑石粉引起的癌症买单，甚至没有一个高管丝毫担心会因为所有这些行为造成人们死亡而入狱。
 
-在该组织中，还包括观察员国，分别是伊朗（已启动成为正式成员国程序）、阿富汗、白俄罗斯、蒙古国。还有对话伙伴国，分别是阿塞拜疆、亚美尼亚、柬埔寨、尼泊尔、土耳其、斯里兰卡、沙特阿拉伯、埃及、卡塔尔。
+1994 年，烟草业的最高 CEO 在国会议员面前撒谎，同时，烟草业在我有生之年每年杀死超过 400,000 名美国人。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/9WFA0U2ULW1AKTHNQ2.png)图片来源：cn.chinadaily.com
+和那四个杀妻案一样，都是为了钱，但是比那四个人想象的要多得多的钱。
 
+那四个杀妻犯都在监狱里了。但今天仍在推广烟草，并使用破产法来避免为石棉死亡买单的决策者们，却仍正在他们的豪宅和游艇上，享受着人们在这种流行病中遭难。
 
-《上海合作组织成立宣言》《上海合作组织宪章》，规定了上海合作组织的宗旨和原则。
+**而这只是表面问题。**
 
-1、加强成员国的相互信任与睦邻友好。
+仅仅在过去的几周里，气候变化驱动的天气导致数百名美国人丧生，数千人无家可归，而化石燃料行业的人在 50 年前就知道，由于他们出售产品，才让这种天气会发生。还是为了钱。
 
-2、维护和加强地区和平、安全与稳定，共同打击恐怖主义、分裂主义和极端主义、毒品走私、非法贩运武器和其它跨国犯罪。
+然后是美国的“健康保险”行业，与世界上任何其他行业不同，每年都有数以万计的美国人因债务（目前超过 1 万亿美元）毁掉他们的生活，或者，在他们生病时禁止向他们提供服务：因为没有保险，他们买不起。
 
-3、开展经贸、环保、文化、科技、教育、能源、交通、金融等领域的合作，促进地区经济、社会、文化的全面均衡发展，不断提高成员国人民的生活水平。
+自从我们建国以来，美国的资本主义一直在以“保护穿着西装的精神病患者” 冷酷杀手的方式发挥着作用。但自从大烟草公司在 1990 年代被淘汰以来，情况变得更加糟糕。
 
-4、推动建立民主、公正、合理的国际政治经济新秩序。
+在 1980 年代，里根放松了对储蓄和贷款行业的管制——可以预见的是，在几年之内，少数高管使自己成为了千万富翁，而美国各地成千上万的家庭被消灭了。司法部介入，并起诉了 1100 名银行家，839 人被定罪，超过 100 人入狱。
 
-5、上海合作组织遵循的主要原则是：恪守《联合国宪章》的宗旨和原则。
+当所谓的“互联网泡沫”在世纪之交爆发时，来自安然、世通、奎斯特和泰科等公司的数十名高管被起诉、定罪和监禁。直到 2005 年，我们仍然偶尔将高管送进监狱。
 
-6、相互尊重独立、主权和领土完整，互不干涉内政，互不使用或威胁使用武力。
+但是现在不再有高管坐牢了。文章后半部分看为什么。
 
-7、所有成员国一律平等。
+新闻来源:[childrenshealthdefense.org][‘Psychopaths in Suits’ Are Getting Away With Murder. Why?](https://childrenshealthdefense.org/defender/psychopaths-getting-away-with-murder/?utm_source=salsa&amp;eType=EmailBlastContent&amp;eId=d8800cb1-6ca8-45e1-9766-b37231ff4113)
 
-8、平等互利，通过相互协商解决所有问题。
+* * *
 
-9、奉行不结盟、不针对其他国家和组织及对外开放原则。
-
-**审视中共倡导该组织成立的目标企图，就是为了维护中共的独裁政治制度为终极目标，用利益强化与其合作的同盟国政治门阀之间的“后独裁时代意识形态”基础。使中共、俄罗斯、连同内亚形成一个类似旧式东亚秩序的“后专制帝国天下”，用以对抗美欧阵营。同时垄断各种利益的输出与输入。**中共党魁江泽民曾强调该组织将为”推动世界多极化和国际关系民主化产生深远的影响”，其主旨还是为了因应美国权力下的秩序体系对于独裁国家阵营的瓦解威胁。上海合作组织”成员国首脑也曾一致承诺反对任何违背1972年签署的《反弹道导弹公约》的行为。这显然是针对美国威胁抛弃该公约、建立国家导弹防御体系的计划。
-
-**据郭文贵先生称，在二战及苏联解体后所形成的泛中亚地区的政治形式，就是典型的“后独裁时代”所显现的地域政治生态的具象。**除此以外，应该包括那些政教合一的统治政体。
-
-英国地缘政治学家麦金德（Halford John Mackinder）称上合组织是一个由中（共）国和俄罗斯意欲主导的欧亚非“世界岛”。在这一点上，中共国和俄国享有共同兴趣。俄国希望能够重新获得对前苏联解体后独立的中亚国家更大的影响，以维护普京权力下不断独裁化的政体。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/IBEIKFMMVGTHERKAPHIA.png)
-上合组织对于中共的实用价值，不光是作为利益交易的沟通平台，更为重要的是以此作为契机，**进一步在内亚边境投射影响力。从中共借反恐名义****利用****该组织打击以“反对中共统治”为目标的穆斯林起义和独立活动就可以看出，中共借此勾连内亚各个统治门阀所蕴含的深意。**
-
-同时，经济的迅速发展需要充足的能源保障，因此，促进上合组织发展合作，使中亚地区巨大的石油、天然气储量得到充分利用，也是中共整体战略考量的一部分。
-
-历数习近平上台以来参加上海合作组织首脑会议的主旨发言，其措辞中所包含的“上海精神、团结互助、共迎挑战、深化合作、命运共同体、共同家园、上合组织新征程”，**其倡导的意图不外乎就是为了继续维持各自的独裁统治政体，深化利益交换和巩固同盟体基础，进一步推动以中共作为“后独裁世界帝国”为主导的权力体系，用以对抗美国所引领的西方民主阵营。**
-
-素材搜集：MSGZ、WEI
-
-*发布：*tianzhihuan
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-1.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
